--- a/ᎤᎾᎩᎾ.mw
+++ b/ᎤᎾᎩᎾ.mw
@@ -54,8 +54,8 @@ Overall, ᎾᏍᎩ ᎨᏒᎢ utugi elisv Ꮎ ᎯᎠ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ
 * [http://www.washingtonpost.com/wp-dyn/content/article/2006/05/19/AR2006051901548.html Rare American Chestnut Trees Discovered (''Washington Post'', May 19, 2006)]
 * [http://www2.volstate.edu/jschibig/resurrectingthechestnut.htm Resurrecting The American Chestnut]
 
-[[Category:Fagaceae|Chestnut, American]]
-[[Category:Flora of Canada|Chestnut, American]]
+[[Category:ᏡᎬ]]
+[[Category:ᎠᎵᏍᏓᏴᏗ ᎠᎴ ᎠᏗᏔᏍᏗ]]
 
 [[ang:Ƿīnlendisc cystel]]
 [[de:Amerikanische Kastanie]]
