--- a/ᎢᏤ_ᎢᏳᏍᏗᎤ_ᏪᏴ.mw
+++ b/ᎢᏤ_ᎢᏳᏍᏗᎤ_ᏪᏴ.mw
@@ -57,13 +57,8 @@
 == ᎤᏓᏎᎦᏤᏗ ᏕᎬᏔᏛ ==
 * [http://historytogo.utah.gov/greenriver.html Utah History: The Green River]
 
-{{Colorado_River_system}}
-
-[[Category:Tributaries of the Colorado River]]
-[[Category:Rivers of Colorado]]
-[[Category:Rivers of Utah]]
-[[Category:Rivers of Wyoming]]
-[[Category:Colorado Plateau]]
+[[Category:ᎠᎹ]]
+[[Category:ᎠᎹᏰᎵ]]
 
 [[de:Green River]]
 [[en:Green River (Utah)]]
