--- a/ᏥᏯ.mw
+++ b/ᏥᏯ.mw
@@ -104,8 +104,7 @@
 * [http://www.chattoogariver.org/index.php?req=otter&quart=Sp2004 North American River Otter]
 * [http://www.ottertrust.org.uk The Otter Trust]
 
-[[Category:Mustelids]]
-[[Category:Marine mammals]]
+[[Category:Animalia]]
 
 [[af:Otter]]
 [[ar:قضّاعة]]
