--- a/ᎠᏙᎯ_ᎢᎾᎨ.mw
+++ b/ᎠᏙᎯ_ᎢᎾᎨ.mw
@@ -78,10 +78,8 @@
 * [[Trees of Canada|ᏙᎪᏩᎸ ᏕᏡᎬ ᎭᏫᎾᏗᏢ ᎦᏁᎳ ᎠᏙᎯ ᎢᎾᎨ]]
 * [[List of U.S. state forests|ᏙᎪᏩᎸ Ꭴ.. ᎤᏔᏂᏗ ᎦᏙᎯ ᎠᏙᎯ ᎢᎾᎨ]]
 
-{{Commons|Forest}}
-
-[[Category:Forestry]]
-[[Category:Landforms]]
+[[Category:ᏡᎬ]]
+[[Category:ᎦᏙᎯ ᏄᏍᏗᏓᏅ]]
 
 [[als:Wald]]
 [[an:Selva]]
