--- a/ᏍᎨᏆ.mw
+++ b/ᏍᎨᏆ.mw
@@ -76,8 +76,7 @@ Image:Höckerschwan_mit_ausgebreiteten-Flügeln.jpg|ᎠᏰᎦᎵ ᏌᏌ
 * [http://ibc.hbw.com/ibc/phtml/familia.phtml?idFamilia=27 Swan videos] ᎾᎿ ᎯᎠ ᎧᎾᏁᏍ ᏥᏍᏆ ᎤᏓᏂᏝᏅ
 * [http://www.swanuk.org.uk/ The Swan Sanctuary Shepperton,England]
 
-[[Category:Cygnus|*]]
-[[Category:Heraldic birds]]
+[[Category:ᏥᏍᏆ]]
 
 [[af:Swaan]]
 [[ar:إوز عراقي]]
