--- a/ᏗᎦᎭᎵ.mw
+++ b/ᏗᎦᎭᎵ.mw
@@ -101,8 +101,7 @@ Many, see [[Lizard#Classification|ᏓᎵᏍᏛ]].
 * [http://news.bbc.co.uk/hi/english/sci/tech/newsid_1689000/1689313.stm Tiny gecko] - ᎯᎠ 'ᎡᎶᎯ ᎤᏤᎵ ᎠᏂᎦᏲᎵ' ᏗᎦᎭᎵ
 * ᎦᎾᏆᏘᏍᏗ ᎠᏩᏛᏗ ᎾᏍᏋ ᏂᎬᎢ ᎭᏫᎾᏗᏢ ᏗᎦᎭᎵ [http://www.newscientist.com/channel/life/mg18825264.600;jsessionid=PEKEKIHAKIMI]
 
-[[Category:Lizards| ]]
-[[Category:Pet reptiles]]
+[[Category:Animalia]]
 
 [[ar:سحلية]]
 [[bo:རྩངས་པ།]]
