--- a/ᎠᏫᏒᏅ.mw
+++ b/ᎠᏫᏒᏅ.mw
@@ -1,4 +1,3 @@
-{{Boxboxtop|Gardens Around the World|right}}
 [[File:Butchart gardens.JPG|thumb|250px|right| ᎾᏍᎩᏍᎩᏂ ᎤᏩᏒᎯ ᎡᏆ ᎠᏫᏒᏅ ᎭᏫᎾᏗᏢ [[Canada]].]]
 [[File:Kuekenhoff 001.jpg|thumb|right|250px|[[Keukenhof]] ᏧᏓᎴᏅᏓ ᏗᎧᏃᏗ ᎠᏫᏒᏅ ᎭᏫᎾᏗᏢ [[Lisse]], [[Netherlands]].]]
 [[File:garden.fountain.arp.750pix.jpg|thumb|right|250px|ᎢᎦᏛ   ᎠᏫᏒᏅ ᎭᏫᎾᏗᏢ [[Bristol]], [[England]].]]
@@ -150,7 +149,7 @@
 * [[History of gardens|ᎧᏃᎮᏍᎩ ᎦᏁᎸ]]
 * [[Paradise garden|ᎠᎵᎮᎵᏥᏓᏍᏗ ᎠᏫᏒᏅ]]
 
-[[Category:Gardening]]
+[[Category:ᎦᏙᎯ ᏄᏍᏗᏓᏅ]]
 
 [[ar:حديقة منزلية]]
 [[arc:ܓܢܬܐ]]
