c/e, removing nonfunctioning templates

--- a/ᎠᏲᎵ.mw
+++ b/ᎠᏲᎵ.mw
@@ -1,4 +1,4 @@
-[[File:Little miss cwy 2007.jpg]]
+[[File:Little miss cwy 2007.jpg|thumb|ᎠᏣᎳᎩ ᎠᎨᏳᏣ]]
 '''ᎠᏲᎵ''' (ᎤᎪᏗᏗ: '''ᏗᏂᏲᎵ''') ᎨᏒᎢ ᎯᎠ ᎢᏳᎵᏍᏙᏗ, ᏂᎦᎵᏍᏗᏍᎬᎫ lyudetiyvda, ᏔᎵ ᏴᏫ. ᎢᏳᏓᎵᎭ ᎯᎠ ᎧᏁᏨ ᎨᏒᎢ ᎬᏔᏅᎯ ᎤᏟ ᎢᎦᎢ ᎧᎵ ᏗᎪᎥᎯ ᏄᏍᏛ ᎧᏃᎮᏗ ᎠᏲᎵ [[human|ᏴᏫ]] ᎦᎪ ᎤᎭ ᎾᏍᎩ ᏂᎨᏒᎾ ᎩᎳ ᏭᎷᏨᎩ adulthood. ᏚᏳᎪᏛ ᏩᏎᏍᏗ ᎾᎿ ᏧᏓᎴᎾᎯ; ᎯᎠ ᏴᏩᏁᎬ ᎤᏩᎫᏗᏗᏒ ᏗᏕᏠᏆᏍᏙᏗ<ref>Houghton Mifflin ᎤᎾᏓᏡᎩ. ᏩᏎᏍᏗ ᎾᎿ ᎠᏲᎵ. ᎯᎠ ᏴᏩᏁᎬ ᎤᏩᎫᏗᏗᏒ ᏗᏕᏠᏆᏍᏙᏗ ᎯᎠ ᎩᎵᏏ ᎦᏬᏂᎯᏍᏗ, ᏅᎩᏁ ᎦᏟᏌᏅ ᎦᎴᏴᏔᏅ.</ref> ᎧᏁᎢᏍᏔᏅᎯ ᎠᏲᎵ ᏥᏄᏍᏗ ᎠᏂᏏᏴᏫᎭ ᎦᎪ ᎤᎭ ᎾᏍᎩ ᏂᎨᏒᎾ ᎩᎳ ᏭᎷᏨᎩ [[puberty|ᎠᏛᏍᎩ]], ᎾᎯᏳᎢ ᎯᎠ [[Convention on the Rights of the Child|ᎤᏓᏂᏝᏅ ᎾᎿ ᎯᎠ ᏂᏚᏳᎪᏛ ᎯᎠ ᎠᏲᎵ]] ᎧᏁᎢᏍᏔᏅᎯ ᎾᏍᎩ ᏥᏄᏍᏗ ᏂᎦᎵᏍᏗᏍᎬᎫ ᎠᏏᏴᏫ ᎭᏫᎾᏗᏢ ᎯᎠ lyudetiyvda 18.<ref>[http://www.unhchr.ch/html/menu3/b/k2crc.htm Convention on the Rights of the Child], ᎢᎦᏛ 1, ᎤᏓᏡᎬ 1.</ref> ᎪᎯ ᎤᏓᏡᎬ discusses prepubescent ᎠᏲᎵ.
 
 ᎯᎠ ᎠᎴᏂᏍᎬ "ᎠᏲᎵ" ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᎾᎥᏂᎨ ᎡᎵᏍᏗ [[parent|ᎠᏓᎦᏴᎵᎨ]]: ᎤᏔᎾ ᎠᎴ ᎯᎠ ᏗᏂᏲᎵ ᎤᎾᏤᎵ ᎠᏓᎦᏴᎵᎨ ᎦᎾᏆᏘᏍᏗ ᎤᎾᏤᎵ ᎠᏛᎯᏍᏙᏗ ᎤᏗᏗᏢ ᎠᏓᎴᏂᏍᎬ; ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ ''"Benjamin, ᎤᎦᏳᎳᏨ 46, ᎨᏒᎢ ᎯᎠ ᎠᏲᎵ Tobias, ᎤᎦᏳᎳᏨ 73"''. ᎤᏠᏱ ᎭᏫᎾᏗᏢ generalized ᎤᏓᏅᏖᏗ, ᎠᎪᏩᏛᏗ [[child node|ᎠᏲᎵ ᏂᎯ]].
@@ -76,9 +76,7 @@
 <references/>
 
 == ᎠᎪᏩᏛᏗ ᎾᏍᎩ ᎾᏍᏇ ==
-{{wikiquote}}
 {{commons|Child}}
-{{wiktionarypar|Child|Children|Prepubescent}}
 
 '''[[List of child related articles|ᏙᎪᏩᎸ ᎠᏲᎵ ᎪᎱᏍᏗ ᎠᎾᏓᏛᏂ ᏚᏓᏡᎬ]]'''
 * [[Boy|ᎠᏧᏣ]], [[Girl|ᎠᎨᏳᏣ]]
@@ -118,14 +116,7 @@
 * [[List of songs about children|ᏙᎪᏩᎸ ᏗᎧᏃᎩᏛ ᎬᏩᏚᏫᏛ ᏗᏂᏲᎵ]] 
 * [[Françoise Dolto]]
 
-{{start box}}
-{{succession box|title=[[Human development (biology)|ᎠᏓᏅᏍᏗ  ᏴᏫ ᏚᏙᎳᏩᏛᎲ]]<br />[[Child|ᎠᏛᏍᎩ]]|before=[[Toddler]]hood|after=[[Preteen]]|years=}}
-{{end box}}
-
-[[Category:Children]]
-[[Category:Educational psychology]]
-[[Category:Human development]]
-[[Category:Humans]]
+[[Category:ᎠᏂᏴᏫ]]
 
 {{Link FA|pt}}
 
