translating Nevada, +ᎤᎾᏓᏟᏌᎲ

--- a/ᎤᎨᏓᎵᏴ.mw
+++ b/ᎤᎨᏓᎵᏴ.mw
@@ -1,6 +1,6 @@
 [[Image:Fljótsdalur.jpg|right|thumb|320px|[[Fljótsdalur]] ᎭᏫᎾᏗᏢ ᎧᎸᎬ [[Iceland]],  ᎤᏟ ᎬᏰᎸᏗ ᎤᏩᎾᏕᏍᎩ ᎤᎨᏓᎵᏴ]]
-[[Image:MountGilbertNV.jpg|thumb|right|220px|Mt.Gilbert & ᏚᏳᎪᏛ ᏴᎩ Canyon, Nevada. ᎯᎠ ᎤᎨᏓᎵᏴ ᎦᏅᏬᎢ ᎭᏫᎾᏗᏢ ᎯᎠ ᏚᏳᎪᏛ ᎢᎬᏱᏗᏢ ᎠᎴ ᎤᏲᏨᎯ ᎾᎥᎢ ᏔᎵ ᎾᎥᎢ-ᎤᎨᏓᎵᏴ]]
-'''ᎤᎨᏓᎵᏴ''' ᎨᏒᎢ [[landform]], ᎦᏙ ᎤᏍᏗ ᏰᎵᏇ ᎠᏍᏓᏅᏅ ᏂᏛᎴᏅᏓ ᎦᏲᎵ [[ᏅᎩ ᏧᏅᏏᏯ ᏑᏟᎶᏛ]]([[ᏅᎩ ᏧᏅᏏᏯ kilometer]]) ᎢᏯᏍᎪᎯᏧᏈ ᎠᎴ ᎢᏧᎳᎭ ᎯᎸᏍᎩ ᎢᏯᎦᏴᎵ ᏅᎩ ᏧᏅᏏᏯ ᎢᏳᏟᎶᏛ ᎭᏫᎾᏗᏢ ᎡᏍᎦᏂ. ᎾᏍᎩ ᎨᏒᎢ ᎢᏯᏛᏁᎵᏓᏍᏗ ᎡᎳᏗ-ᎠᏝᎥ ᎡᏍᎦᏂ [[ᎦᏙᎯ]], ᏓᎦtᎤᏫᏍᏔᏅ ᎾᎥᎢ ᎦᎸᎳᏗᎨᏍᏙᏗ ᎡᏍᎦᏂ ᏯᏛᎿ ᏥᏄᏍᏗ [[ᎣᏓᎸ]]ᎠᎴ [[ᎦᏚᏏ]].
+[[Image:MountGilbertNV.jpg|thumb|right|220px|Mt.Gilbert & ᏚᏳᎪᏛ ᏴᎩ Canyon, [[ᏁᏩᏓ]]. ᎯᎠ ᎤᎨᏓᎵᏴ ᎦᏅᏬᎢ ᎭᏫᎾᏗᏢ ᎯᎠ ᏚᏳᎪᏛ ᎢᎬᏱᏗᏢ ᎠᎴ ᎤᏲᏨᎯ ᎾᎥᎢ ᏔᎵ ᎾᎥᎢ-ᎤᎨᏓᎵᏴ]]
+'''ᎤᎨᏓᎵᏴ''' ᎨᏒᎢ [[landform]], ᎦᏙ ᎤᏍᏗ ᏰᎵᏇ ᎠᏍᏓᏅᏅ ᏂᏛᎴᏅᏓ ᎦᏲᎵ [[ᏅᎩ ᏧᏅᏏᏯ ᏑᏟᎶᏛ]]([[ᏅᎩ ᏧᏅᏏᏯ kilometer]]) ᎢᏯᏍᎪᎯᏧᏈ ᎠᎴ ᎢᏧᎳᎭ ᎯᎸᏍᎩ ᎢᏯᎦᏴᎵ ᏅᎩ ᏧᏅᏏᏯ ᎢᏳᏟᎶᏛ ᎭᏫᎾᏗᏢ ᎡᏍᎦᏂ. ᎾᏍᎩ ᎨᏒᎢ ᎢᏯᏛᏁᎵᏓᏍᏗ ᎡᎳᏗ-ᎠᏝᎥ ᎡᏍᎦᏂ [[ᎦᏙᎯ]], ᏓᎦtᎤᏫᏍᏔᏅ ᎾᎥᎢ ᎦᎸᎳᏗᎨᏍᏙᏗ ᎡᏍᎦᏂ ᏯᏛᎿ ᏥᏄᏍᏗ [[ᎣᏓᎸ]] ᎠᎴ [[ᎦᏚᏏ]].
 
 ==ᎼᏏ ᎤᏬᏪᎳᏅᎯ ᎤᎨᏓᎵᏴ==
 ᎤᎨᏓᎵᏴ ᎠᎴ ᎪᏢᎯ Ꭲgotlvhi ignelvhi ᎾᎥᎢ ᎤᏂᎪᏗᏗ geographical processes. [[U-shaped valley|ᎪᎯᏗᏍᏗ ᎤᎨᏓᎵᏴ]], ᎦᏙ ᎤᏍᏗ ᎠᎴ ᎤᏠᏱᎭ Ꭴ- ᎤᏟ ᎬᏰᎸᏗ ᎬᎾᏬᏍᎬ V-ᏓᏍᏓᏅᏅ ᏚᎷᏨ, ᎨᏒᎩ ᎪᏢᎯ Ꭲgotlvhi ignelvhi ᏍᎪᎯ ᎯᎸᏍᎩ ᎢᏯᎦᏴᎵ ᏧᏕᏘᏴᏓ ᎢᏳ ᏥᎨᏒ (ᎤᎪᏗᏗ ᏄᏓᎷᎸᎾ ᎾᎯᏳᎨᏒ ᎯᎠ ᎣᏂ [[ᎤᏁᏍᏓᎳ lyudetiyvda]]) ᎾᎥᎢ ᎯᎠ ᏂᎬᎢ erosive ᎤᎳᏂᎬᎬ [[ᎤᏴᏢ]]. ᎯᎸᏍᎩ ᎪᎯᏗᏍᏗ ᎤᎨᏓᎵᏴ ᏰᎵᏇ ᎾᏍᏋ ᎠᏩᏛᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎩᎵᏏ [[ᎥᏓᎵ ᏍᎦᏚᎩ]] ᎠᎴ ᎤᎪᏗᏗ ᏰᎵᏇ ᎾᏍᏋ ᎠᏩᏛᏗ ᎭᏫᎾᏗᏢ [[ᏂᎦᏛᎢ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ]]. [[ᎠᎽᏰᎵ ᎤᎨᏓᎵᏴ]], ᏯᏛᎿ ᏥᏄᏍᏗ ᎯᎠ [[ᎡᏆ ᎠᎽᏰᎵ ᎤᎨᏓᎵᏴ]], ᎠᎴ ᎪᏢᎯ Ꭲgotlvhi ignelvhi ᎾᎥᎢ ᎯᎠ ᎤᏚᏃᎯᏍᏔᏍᎧ ᎯᎠ [[ᎡᎶᎯ]] ᎤᏤᎵ ᎠᏰᎵ ᎤᏍᏆᎸᎲ [[Plate tectonics|tectonic]] ᎠᎵᏂᎬᏁᏗᎢ ᎭᏫᎾᏗᏢ ᎯᎠ ᎡᎶᎯ ᎤᏤᎵ ᎦᏚᎢ.  ᎤᎨᏓᎵᏴ ᎠᎴ, ᏱᏂᎬᏛᎾ, ᎤᎪᏗᏗ ᏱᏓᏟᎶᏍᏔᏅ ᎪᏢᎯ Ꭲgotlvhi ignelvhi ᎾᎥᎢ [[ᎤᏪᏴ]] ᎠᎵᏂᎬᏁᏗᎢ (ᎯᎠ ᎠᎵᏖᎸᏗ ᎠᏓᏟᏒᎢ ᎠᎹ, ᏯᏛᎿ ᏥᏄᏍᏗ [[ᎤᏪᏴ]]), ᎦᏙ ᎤᏍᏗ [[ᎠᏲᎶᎬ]]ᎯᎠ ᎦᏙᎯ ᏄᏍᏗᏓᏅ.
@@ -55,8 +55,7 @@
 * [http://www.esa.int/SPECIALS/SMART-1/SEMM7R7X9DE_2.html ESA image]: [[Vallis Alpes]], ᏴᎩ ᎯᎠ ᎡᎶᎯ ᏂᎦᏛᎢ
 * [http://www.geoinf.fu-berlin.de/projekte/mars/hrsc152-OphirChasma.php Valles Marineris and Ophir Chasma], [[ᎦᏬᏂᎯᏍᏗ]] ᎧᎾᏁᏍᎦ ᎤᏏᎵᏕᏫᏒ ᏄᏍᏓ ([[ᎩᎵᏏ]] ᎠᎴ [[ᎠᏓᏥ]])
 
-[[Category:Landforms]]
-[[Category:Valleys| ]]
+[[Category:ᎦᏙᎯ ᏄᏍᏗᏓᏅ]]
 
 [[an:Val]]
 [[ar:واد]]
