--- a/ᏓᎾᎵᏍᏓᏴᎲᏍᎬ.mw
+++ b/ᏓᎾᎵᏍᏓᏴᎲᏍᎬ.mw
@@ -65,7 +65,7 @@ Seasonal ᏓᎾᎵᏍᏓᏴᎲᏍᎬ ᎠᎴ ᏕᎫᎪᏔᏅ ᎾᎥᎢ ᎯᎠ [[s
 
 ==ᎤᏓᏎᎦᏤᏗ ᏗᏕᎬᏔᏛ==
 * [http://www.exhibitafrica.com/o-events-cul.php ExhibitAfrica: Database of Afrocentric events & festivals]
-*[http://www.britishrock.cc Festivalguide (Datebase and Line Ups of european and worldwide music festivals]
+*[http://www.britishrock.cc Festivalguide (Database and Line Ups of European and worldwide music festivals]
 *[http://www.newadvent.org/cathen/06021b.htm An article on ecclesiastical feasts in the Catholic Encyclopaedia]
 *[http://web-japan.org/atlas/festivals/festi_fr.html Japan Atlas Festivals] 
 *[http://www.geocities.com/hashanayobel/laudsfeast.htm#SOLEMNITIES A calendar of Catholic Feasts and Solemnities]
@@ -74,7 +74,7 @@ Seasonal ᏓᎾᎵᏍᏓᏴᎲᏍᎬ ᎠᎴ ᏕᎫᎪᏔᏅ ᎾᎥᎢ ᎯᎠ [[s
 <!-- Please do not add links to websites of individual festivals. Thanks. 
 -->
 
-[[Category:Festivals| ]]
+[[Category:ᎤᎾᏙᏢᎯ]]
 
 [[ar:مهرجان]]
 [[arc:ܥܕܥܐܕܐ]]
