--- a/ᎩᏳᎦ.mw
+++ b/ᎩᏳᎦ.mw
@@ -88,4 +88,36 @@ Image:Chipmunkcanada rs 300x.jpg|Chipmunk, Western Canada, Rocky Mountains
 
 *[http://www.etymonline.com/index.php?search=chipmunk&searchmode=none Etymology Online: Chipmunk]
 
-[[Category:Squirrels]]
+
+[[Category:Animalia]]
+
+[[cr:ᔖᔖᑯᓂᑯᒑᔥ]]
+[[da:Jordegern]]
+[[de:Streifenhörnchen]]
+[[en:Chipmunk]]
+[[es:Tamias]]
+[[fa:سمورچه]]
+[[fi:Maaoravat]]
+[[fr:Tamia]]
+[[he:טמיאס]]
+[[hi:चिपमंक]]
+[[hu:Csíkosmókus]]
+[[it:Tamias]]
+[[ja:シマリス]]
+[[kk:Борша тышқан]]
+[[ko:다람쥐속]]
+[[kv:Визяорда]]
+[[lt:Burundukai]]
+[[mn:Жирх]]
+[[nl:Wangzakeekhoorns]]
+[[nv:Hazéítsʼósii]]
+[[pdc:Fensemaus]]
+[[pl:Pręgowce]]
+[[pt:Tâmia]]
+[[ru:Бурундуки]]
+[[sah:Моҕотойдор уустара]]
+[[simple:Chipmunk]]
+[[sv:Jordekorrar]]
+[[uk:Бурундук]]
+[[zh:花栗鼠]]
+[[zh-min-nan:Hoe-le̍k-chhí]]
