redirecting to ᎩᏳᎦ

--- a/ᎩᎤᎦ.mw
+++ b/ᎩᎤᎦ.mw
@@ -1,122 +1,1 @@
-:''ᎪᎯ ᎤᏓᏡᎬ ᎨᏒᎢ ᎬᏩᏚᏫᏛ ᎯᎠ gantlai. ᎾᏍᎩᎾᎢ ᎯᎠ ᎠᏂᏯᏫᏍᎩ ᎠᎨᏲᎲᏍᎬ aircraft, ᎠᎪᏩᏛᏗ [[De Havilland Chipmunk|ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ Havilland ᎩᎤᎦ]].''
-{{Taxobox
-| color = pink
-| name = ᎩᎤᎦ
-| image = chipmunk.jpg
-| image_width = 200px
-|image_caption = ''[[Tamias striatus]]''
-| regnum = [[Animal|gantlai]]ia
-| phylum = [[Chordate|Chordata]]
-| classis = [[Mammal|gantlai]]ia
-| ordo = [[Rodent]]ia
-| familia = [[Sciuridae]]
-| tribus = [[Marmotini]]
-| genus = '''''Tamias'''''
-| genus_authority = [[Johann Karl Wilhelm Illiger|Illiger]], 1811
-| subdivision_ranks = Species
-| subdivision = 
-23 species
-}}
-
-'''ᎩᎤᎦ''' ᎨᏒᎢ ᎯᎠ ᏧᏣᏔᏊ ᏚᏙᎥ ᎾᏍᎩᎾᎢ ᏂᎦᎵᏍᏗᏍᎬᎫ ᎤᏍᏗ [[ᏌᎶᎵ]]-ᎾᏍᎩᏯᎢ [[rodent]] ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎯᎠ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ '''''Tamias''''' ᎭᏫᎾᏗᏢ ᎯᎠ ᏏᏓᏁᎸᎯ [[Sciuridae]]. ᎬᏩᏚᏫᏛ 23 ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎤᎶᏒᎩ ᎭᏫᎾᏗᏢ ᎪᎯ ᎦᏓ ᎦᏂᏴᏙ, ᎬᏙᏗ ᏌᏊ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎭᏫᎾᏗᏢ northeastern [[Asia]], ᏌᏊ ᎭᏫᎾᏗᏢ ᎯᎠ ᎧᎸᎬᎢᏗᏢ ᎢᎦᏛ Canada ᎠᎴ ᎯᎠ ᎢᏧᎳ ᎠᏴ, ᎠᎴ ᎯᎠ ᎠᏣᏪᏐᎸᏍᏙᏗ ᎾᏰᎯᏯ ᎯᎠ ᏭᏕᎵᎬᏗᏢ ᎢᎦᏛ [[North America|ᎤᏴᏢ ᎠᎺᎵᎨ]].
-ᎯᎠ ᏚᏙᎥ ᎠᎾᏍᎬᏘ ᎤᎭ ᎠᎴᏅᏔᏅ ᏭᏪᏙᎢ spelled "chitmunk" (ᎠᏎᏱᎩ ᏂᏛᎴᏅᏓ ᎯᎠ [[Ojibwe language|Ojibwe]] ᎧᏁᏨ ''ajidamoo'', ᎦᏛᎬᎢ "ᎩᎦᎨ ᏌᎶᎵ"). ᏱᏂᎬᏛᎾ, ᎯᎠ ᎢᎬᏱᏗᏢᏍᏗ ᎤᏙᏢᏒ cited ᎭᏫᎾᏗᏢ ᎯᎠ Oxford ᎩᎵᏏ ᏗᏕᏠᏆᏍᏙᏗ (ᏂᏛᎴᏅᏓ 1842) ᎨᏒᎢ "chipmonk". ᏐᎢ ᎢᎬᏱ ᏚᏙᏢᏒ ᎠᏠᏯᏍᏛ "chipmuck" ᎠᎴ "chipminck", ᎠᎴ ᎭᏫᎾᏗᏢ ᎯᎠ 1830s ᎤᏅᏌ ᎨᏒᎩ ᎾᏍᎩ ᎾᏍᏇ ᏩᏎᎸᎯ ᏥᏄᏍᏗ "ᎤᏆᏔᎸᏓ ᏌᎶᎵ", ᏰᎵᏊ ᏱᎩ ᎭᏫᎾᏗᏢ ᏩᏎᎸᎯ ᎯᎠ ᎤᏃᏴᎬ ᎤᏅᏌ ᎪᏢᏗ. ᎤᏅᏌ ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᎤᏯᏅᎲ striped ᏌᎶᎵ ᎠᎴ ᎦᏙᎯ ᏌᎶᎵ; ᏱᏂᎬᏛᎾ, ᎯᎠ ᏚᏙᎥ "ᎦᏙᎯ ᏌᎶᎵ" ᎨᏒᎢ ᎤᏟ ᎢᎦᎢ ᎤᏠᏱᎭ ᎠᏍᏆᏂᎪᏔᏅ ᎾᏍᎩᎾᎢ ᎯᎠ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ''[[Spermophilus]]'', ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ ''Tamias'' ᎠᎴ ''Spermophilus'' ᎠᎴ ᎾᏍᎩ ᎤᏩᏒ ᏔᎵ ᎯᎠ 13 [[genus|genera]] ᎦᏙᎯ-ᎠᎴᏂᏙᎲ [[Sciuridae|sciurids]]. 
-
-ᎧᎸᎬᎢᏗᏢ ᎩᎤᎦ ᎤᎾᎵᎪᎯ ᎭᏫᎾᏗᏢ ᎢᎬᏱ ᎠᎹ ᎦᏄᎪᎬ ᎠᎴ ᎠᏏᏇ ᎭᏫᎾᏗᏢ ᎢᎬᏱ ᎪᎨᏱ ᎠᏛᎯᏍᏙᏗ ᏔᎵ ᎠᏂ Ꮣ, ᎠᏂᏏᏴᏫᎭ ᏅᎩ ᎯᏍᎩ ᎠᏲᎵ, ᎠᎴ ᏭᏕᎵᎬᏗᏢ ᎩᎤᎦ ᎾᏍᎩ ᎤᏩᏒ ᎠᏂᏁᏉᎬ ᏌᏊ ᎢᏳᏩᎫᏗ ᏑᏕᏘᏴᏓ. ᎯᎠ ᎠᏲᎵ ᏗᏓᏲᎯᏍᏗ ᏂᏛᎴᏅᏓ ᎯᎠ ᎦᎷᎯᏍᏗ ᎤᎶᏐᏅ ᎬᏩᏚᏫᏛ ᏑᏓᎵ ᎯᎸᏍᎩ ᎢᏳᎾᏙᏓᏆᏍᏗ ᎠᎴ ᎬᎾᏍᏗ atsinuqowisgv ᎾᎿ ᎤᎾᏤᎵ ᎣᏤᎵ ᎭᏫᏂᏗᏢ ᎯᎠ ᏐᎢ ᏔᎵ ᎯᎸᏍᎩ ᎢᏳᎾᏙᏓᏆᏍᏗ.
-
-ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ ᎤᏅᏌ ᎠᎴ ᏱᏓᏟᎶᏍᏔᏅ depicted ᎬᏙᏗ ᎤᎾᏤᎵ ᎤᏩᏱ ᎦᎸᎳᏗᏢ ᎯᎠ ᎠᎰᎵ, ᎠᎵᏍᏓᏴᎲᏍᎬ tuya aniladisgi, ᎠᎴ ᎤᏟ ᎢᎦᎢ ᏂᎬᎢ ᎤᎾᏤᎵ ᏔᎵ bulging atsinuqowisgv ᎾᎿ ᎢᏳᏍᏗᏊ ᎠᏍᏆᎨᏂ, ᎩᎤᎦ ᎠᎩᏍᏗ ᎤᏣᏘ ᎤᏟ ᎢᎦᎢ ᏧᏓᎴᎿᎢ ᎠᏍᏓᏅᏅ ᎤᏂᎩᏍᏘ ᎬᎾᏬᏍᎬ ᎣᏍᏛ ᎣᏍᏛ. ᎤᎾᏤᎵ [[omnivore|ᎠᎵᏍᏓᏴᏗ]] ᎠᎵᏍᏓᏴᏗ ᎤᎾᏠᏯᏍᏗ ᎤᏛᏒ ᎤᎦᏔ, ᎣᏍᏛ, ᎯᎸᏍᎩ ᏥᏍᏆ' ᏧᏪᏥ, fungi, ᏥᏍᎪᏯ, ᎠᎴ ᎠᏂᏍᎧᏱ. ᎦᎷᏨ ᎤᎳᎪᎲᏍᏗ, ᎤᎪᏗᏗ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎩᎤᎦ ᎠᎴᏅᏗ stockpile ᎾᏍᎩ ᎯᎠ ᏧᎬᏩᎶᏗ ᎭᏫᎾᏗᏢ ᎤᎾᏤᎵ ᎦᎷᎯᏍᏗ, ᎾᏍᎩᎾᎢ [[ᎪᎳ]]. ᏐᎢ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎪᏢᏗ ᏎᏍᏗ ᎤᏍᏗ ᎬᏍᎦᎶᏗ ᎠᏔᎴᏒ ᎠᎵᏍᏓᏴᏗ. ᎾᏍᎩ ᎯᎠ ᏔᎵ ᏧᏓᎴᏅᏓ ᎾᏛᏁᎲᎢ ᎠᎴ ᎤᏯᏅᎲ [[larder-hoarder|ᎠᏓᎾᏅ ᎬᏍᎦᎶᏗ]] ᎠᎴ [[ᎠᏗᎦᎴᏯᏍᏗ ᎬᏍᎦᎶᏗ]]. ᎠᏓᎾᏅ hoarders ᎤᏠᏱᎭ ᎠᎴᏂᏓᏍᏗ ᎭᏫᎾᏗᏢ ᎤᎾᏤᎵ ᎤᏁᏍᎩᎸᏒ iyuwakodi [[ᎠᎹ ᎦᏄᎪᎬ]].
-
-ᎾᏍᎩ ᎯᎠ ᎤᏍᏗ ᏌᎶᎵ ᎠᎧᎵᏐᏗ ᎯᎸᏍᎩ ᎤᎵᏍᎨᏛ ᎤᏯᎾᏛᏁᏗ ᎭᏫᎾᏗᏢ [[forest|ᎠᏙᎯ ᎢᎾᎨ]] [[ecosystem]]. ᎤᎾᏤᎵ activities ᎬᏙᏗ ᎤᏓᎦᏎᏍᏗ ᎠᏍᏆᏂᎪᏙᏗ ᎠᏫᏒ ᎠᎴ ᎬᏍᎦᎶᏗ ᏡᎬ ᎤᎦᏔ ᏗᏁᎶᏗ ᏗᎦᎾᏗᏫᏍᏗ ᎠᏛᏁᎵᏍᎩ ᎤᏍᏆᎸᎡᎲ ᎭᏫᎾᏗᏢ [[seedling|ᎠᏲᎵ]] ᎪᏢᏒᎢ.  ᎤᏅᏌ ᎾᏍᎩ ᎾᏍᏇ ᎤᏲᏨᎯ ᎤᎪᏗᏗ ᏄᏓᎴᎿᎥ ᏧᏓᎴᏅᏓ [[fungi]], ᎠᏠᏯᏍᏗᏍᎩ ᎾᏍᎩ ᎤᏠᏯᏍᏔᏅ ᎭᏫᎾᏗᏢ symbiotic mycorrhizal ᎤᎾᎵᎪᏒ ᎬᏙᏗ ᏕᏡᎬ, ᎠᎴ ᎠᎴ ᎤᎵᏍᎨᏛ ᎢᏚᏳᎪᏛ ᎾᏍᎩᎾᎢ dispersal ᎯᎠ ᏓᏪᎳᎩᏍᎩ ᎤᏒᏙᏂ [[sporocarps]] (truffles) ᎦᏙ ᎤᏍᏗ ᎤᎭ ᎢᏗᎦᏘᎭ-ᏚᏙᎳᏩᏛᎲ ᎬᏙᏗ ᎾᏍᎩ ᎯᎠ ᎠᎴ ᏐᎢ [[mycophagous]] gantlai ᎠᎴ ᎯᎠ ᎢᏴ ᎤᎴᎾᎯᏛ ᎯᎠ ᏅᏏᎾᏒ ᎧᏁᏉᎩ ᎤᎾᏤᎵ ᏓᏪᎳᎩᏍᎩ ᏗᎬᏩᎶᏒ ᎯᎠ ᎤᏃᎴ.
-
-ᎩᎤᎦ ᏗᏁᎶᏗ ᎤᎵᏍᎨᏛ ᎠᏛᏁᎵᏍᎩ ᎤᏍᏆᎸᎡᎲ ᏥᏄᏍᏗ ᎠᎵᏍᏓᏴᏗ ᎾᏍᎩᎾᎢ ᏧᏓᎴᏅᏓ ᎠᎩᏍᎬᎢ gantlai ᎠᎴ ᎯᎸᏍᎩ ᏥᏍᏆ, ᎠᎴ ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ opportunistic predators ᎤᏅᏌ, ᎾᏍᎩᎾ ᎨᏒ ᎬᏙᏗ ᎾᏍᎩ ᎣᏏ ᎠᏰᎸᏗ ᏥᏍᏆ ᏧᏪᏥ ᎠᎴ [[ᎠᏲᎵ]].  ᎭᏫᎾᏗᏢ [[Oregon]], [[ᎣᏓᎸ ᏣᏉᎳᏕ]](''Siala currucoides'') ᎤᎭ ᏭᏪᏙᎢ ᎠᎦᏎᏍᏔᏅ energetically mobbing ᎩᎤᎦ Ꮎ ᎤᏅᏌ ᎠᎪᏩᏛᏗ ᎾᎥᏂᎨ ᎤᎾᏤᎵ ᎤᏁᏍᎩᎸᏒ ᏕᏡᎬ.
-
-ᎩᎤᎦ ᎠᏛᎯᏍᏙᏗ ᎤᏜᏅᏛ [[ᎦᎷᎯᏍᏗ]]ᎦᏙ ᎤᏍᏗ ᏰᎵᏇ ᎾᏍᏋ ᎤᏟ ᎢᎦᎢ ᎬᎾᏬᏍᎬ 3.5 m ᎭᏫᎾᏗᏢ ᏂᎦᏅᎯᏒ ᎬᏙᏗ ᎯᎸᏍᎩ ᎠᏔᎴᏒ ᎠᎹᏱ-ᎤᏍᏆᏂᎪᏗ ᎠᏴᏍᏙᏗ.  ᎯᎠ ᎦᎵᎲᎢ ᎠᏂᎩᏄᏙᏗ ᎠᎴ 
-ᎠᏍᏆᏂᎪᏔᏅ ᏭᎶᏒᏍᏔᏅ ᎤᏓᏅᎦᎸᏓ ᏥᏄᏍᏗ ᎤᏯᏍᎦ ᎠᎴ ᎦᎳᏅᎯ ᎠᎴ ᎠᏓᎾᏅ ᎭᏫᎾᏗᏢ ᎠᏓᏯᏍᏗ ᎧᏂᎬᎾᎥ.
-
-ᎢᏳᏃ ᏄᎾᏰᎯᏍᏛᎾ ᎤᏅᏌ ᎢᏳᏓᎵᎭ ᏗᏙᎳᎩ ᏂᎦᎾᏰᏍᎬᎾ ᏰᎵᏊ ᏗᏓᏂᎸᎢᏍᏗ ᎠᎵᏍᏓᏴᏗ ᏂᏛᎴᏅᏓ ᎯᎠ ᏧᏃᏰᏂ ᎠᏂᏴᏫ.  ᎯᎠ ᎠᏓᎪᎵᏰᏍᎩ ᎠᏑᏰᏍᏗ ᎦᎸᎳᏗᏢ ᎠᎴ ᎤᏓᏅᏗ ᏂᎦᎵᏍᏗᏍᎬᎫ ᎨᏯᏔᎯ gantlai ᎢᏳᏗᎾ
-ᎾᏍᏋ ᎠᏓᏅᏖᎯᏌᏅ ᏚᏓᏅᏗᏍᏔᏅ. ᎾᎯᏳᎢ ᎠᏓᏬᏍᎬ ᎨᏒᎢ ᎾᏍᎩᏍᎩᏂ ᎤᏩᏒᎯ ᎢᏳᏓᎵᎭ, ᎢᏳᏃ ᎾᏍᎩ ᏂᎨᏒᎾ ᎬᏙᏗ-ᎬᏂᎨᏒ ᏄᏍᏛᎢ, ᎭᏫᎾᏗᏢ rodents, ᎩᎤᎦ ᎠᏓᏍᎧᎷᏥ ᏰᎵᏇ ᏩᏗᏱ ᏄᎵᏂᎬᎬ ᎠᎴ ᎦᏂᏰᎬ bacterial ᎥᏳᎩ.
-==ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ==
-*[[Alpine Chipmunk|ᏂᎦᏛᎢ ᎩᎤᎦ]], ''Tamias alpinus'' 
-*[[Yellow pine Chipmunk|ᏓᎶᏂᎨ ᏃᏥ ᎩᎤᎦ]], ''Tamias amoenus'' 
-*[[Gray-footed Chipmunk|ᎤᏍᎪᎸ ᏌᎪᏂᎨ-ᎦᏣᏄᎳ ᎩᎤᎦ]], ''Tamias canipes'' 
-*[[Gray-Collared Chipmunk|ᎤᏍᎪᎸ ᏌᎪᏂᎨ-Collared ᎩᎤᎦ]], ''Tamias cinereicollis'' 
-*[[Cliff Chipmunk|ᏂᎦᏛᎢ ᎩᎤᎦ]], ''Tamias dorsalis'' 
-*[[Merriam's Chipmunk|Merriam ᎤᏤᎵ ᎩᎤᎦ]], ''Tamias merriami''  
-*[[Least Chipmunk|ᎠᏂᎦᏲᎵ ᎩᎤᎦ]], ''Tamias minimus''  
-*[[California Chipmunk|California ᎩᎤᎦ]], ''Tamias obscurus'' 
-*[[Yellow-cheeked Chipmunk|ᏓᎶᏂᎨ-cheeked ᎩᎤᎦ]], ''Tamias ochrogenys'' 
-*[[Palmer's Chipmunk|ᏗᎦᏣᏄᎶ ᎤᎾᏣ ᎤᏤᎵ ᎩᎤᎦ]], ''Tamias palmeri''  
-*[[Panamint Chipmunk|Panamint ᎩᎤᎦ]], ''Tamias panamintinus''  
-*[[Long-eared Chipmunk|ᎦᏅᎯᏓ-eared ᎩᎤᎦ]], ''Tamias quadrimaculatus'' 
-*[[Colorado Chipmunk|Colorado ᎩᎤᎦ]], ''Tamias quadrivittatus'' 
-*[[Red-Tailed Chipmunk|ᎩᎦᎨ-ᎦᏛᎢ ᎩᎤᎦ]], ''Tamias ruficaudus''  
-*[[Hopi Chipmunk|Hopi ᎩᎤᎦ]], ''Tamias rufus''  
-*[[Allen's Chipmunk|Allen ᎤᏤᎵ ᎩᎤᎦ]], ''Tamias senex''  
-*[[Siberian Chipmunk|ᎤᏴᏢ ᎩᎤᎦ]], ''Tamias sibiricus'' 
-*[[Siskiyou Chipmunk|Siskiyou ᎩᎤᎦ]], ''Tamias siskiyou''  
-*[[Sonoma Chipmunk|Sonoma ᎩᎤᎦ]], ''Tamias sonomae''  
-*[[Lodgepole Chipmunk|Lodgepole ᎩᎤᎦ]], ''Tamias speciosus'' 
-*[[Eastern Chipmunk|ᎧᎸᎬᎢᏗᏢ ᎩᎤᎦ]], ''Tamias striatus''  
-*[[Townsend's Chipmunk|Townsend ᎤᏤᎵ ᎩᎤᎦ]], ''Tamias townsendii'' 
-*[[Uinta Chipmunk|Uinta ᎩᎤᎦ]], ''Tamias umbrinus''
-
-==ᎠᎧᏁᏍᏗ ᎥᎦᏔᎲᎢ ᏫᏓᏎᎸᎢ==
-
-===(Alvin ᎠᎴ) ᎯᎠ ᎩᎤᎦ===
-ᎭᏫᎾᏗᏢ [[1958]] [[Ross Bagdasarian]] (ᎬᏗᏍᎬᎢ ᎯᎠ ᎦᏬᏂᎯᏍᏗ ᎠᏲᏓᏜᎥ ᏚᏙᎥ [[David Seville]], ᏓᎪᎥᎩ ᎤᎶᏐᏅ [[Seville, Spain]]) ᏓᏥᏲᏒᎩ "ᎯᎠ ᎩᎤᎦ ᎧᏃᎩᏍᏗ" ("ᏓᏂᏍᏓᏲᎯᎲ, ᎫᏢᎥᏍᎬ't ᎾᏍᏋ ᎣᏂᏱᏳ"), ᎠᏍᏆᏙᏅ-ᎦᎸᎳᏗᏢ ᏗᏟᎶᏍᏔᏅ ᎤᏩᏒᎠᏍᎦᏯ ᎢᏯᏛᏁᏗ ᏦᎢ-ᎢᎦᏛ nvwatohiyadv. ᎯᎠ ᏄᎵᏍᏔᏅ ᎦᎸᎳᏗ-ᏂᏓᏙᎳᎬᎾ cartoony ᎧᏁᎬ ᎤᏲᏴᎬ ᎨᏒᎩ ᏓᎪᎥᎩ "Alvin", "Simon", ᎠᎴ "Theodore" ᎤᎶᏐᏅ ᏄᎬᏫᏳᏌᏕᎩ ᎾᎾᎢ ᎯᎠ ᎪᏪᎸ ᎤᎾᏓᏡᎩ ᎦᏙ ᎤᏍᏗ ᎦᎴᏴᏔᏅᎯ ᎯᎠ ᎪᏪᎸ. "ᎯᎠ ᎩᎤᎦ ᎧᏃᎩᏍᏗ" ᎤᏪᏅᏒ ᎾᎿ ᎠᏓᏠᎯᏍᏗ ᏔᎵ [[Grammy Award|Grammy ᏗᎫᎪᏔᏅ]]ᎠᎴ ᎢᏤ "ᎤᎾᏓᏟᏌᎲ" ᎤᏯᏅᎲ "[[The Chipmunks|David Seville & ᎯᎠ ᎩᎤᎦ]]" ᎠᏓᏁᏟᏴᏍᏗ ᎤᏂᎸᏉᏗ ᏧᏓᎴᎿᎢ ᎢᏯᏛᏁᎯ.
-
-ᎭᏫᎾᏗᏢ [[1961]], ᎯᎠ ᎤᎾᏓᏟᏌᎲ ᎬᎨᏫᏍᏗ ᎭᏫᎾᏗᏢ ᎤᎾᏤᎵ ᎣᏤᎵ [[animation|ᎥᎴᏂᏙᎲ]] [[television series|television ᎧᏁᏉᎥᎢ ᎤᏠᏱᎭ]], ''ᎯᎠ Alvin ᎤᎾᏛᏁᎸᏗ''. ᎯᎠ ᎠᎦᏓᏅᏖᏗ ᎠᏏᏴᏫ regained ᎤᎾᏤᎵᏛ ᎭᏫᎾᏗᏢ ᎯᎠ ᎢᎬᏱ [[1980s]] ᎭᏫᎾᏗᏢ ᎯᎠ ᏓᏕᏲᎲᏍᎬ Bagdasarian ᎤᏤᎵ ᎤᏪᏥ [[Ross Bagdasarian, Jr.|Ross Jr.]]. ᎢᏤ ᎧᏁᏉᎥᎢ ᎤᏠᏱᎭ, ''[[Alvin and the Chipmunks|Alvin ᎠᎴ ᎯᎠ ᎩᎤᎦ]]'', debuted ᎭᏫᎾᏗᏢ [[1983]], ᎬᏙᏗ ᏄᏍᏛ ᏗᎧᏃᏗ ᏫᏚᏳᎪᏛ (''ᎯᎠ ᎩᎤᎦ ᎠᏁᎸᎣᏙᏗ'', [[1987]]) ᎠᎴ ᎯᎸᏍᎩ [[direct-to-video|ᎠᏓᏎᎮᏗ--video]] ᏣᏥᏲᎯᏍᏗ ᎭᏫᎾᏗᏢ ᎯᎠ [[1990s]] ᎠᏍᏓᏩᏗᏒ ᎾᏍᎩ. Ross Bagdasarian, Jr. ᏓᏓᏁᎳᏁ ᎯᎠ ᎧᏁᎬ ᎤᏲᏴᎬ Dave, Alvin, ᎠᎴ Simon ᎭᏫᎾᏗᏢ ᎯᎠ ᎢᏤ ᎠᏛᎯᏍᏙᏗ; ᎤᏤᎵ ᎤᏍᏓᏴᎲᏍᎩ [[Janice Karman]] ᎾᏛᏁ ᎯᎠ ᎧᏁᎬ ᎤᏲᏴᎬ Theodore ᎠᎴ ᎯᎠ ᎠᎨᏴ ᎩᎤᎦ ᎠᏗᏆᎳᏕᏲ-ᎤᏣᏘᎾ ᎤᎾᏓᏟᏌᎲ ᎯᎠ Chipettes.
-
-===Walt Disney===
-ᎭᏫᎾᏗᏢ [[The Walt Disney Company|Disney]] ᎤᏤᎵ ᎥᎴᏂᏙᎲ ᎤᎾᏛᏁᎶᏗ ''[[The Emperor's New Groove|ᎯᎠ ᏄᎬᏫᏳᏌᏕᎩ ᎤᏤᎵ ᎢᏤ ᎦᏓᎷᎦᏅ]]'', ᎠᎦᏓᏅᏖᏗ Kronk ᏂᎦᏛ ᎤᏠᏱᎭ ᏧᏓᎴᎾᎢ ᎬᏙᏗ ᎩᎤᎦ, ᎭᏫᎾᏗᏢ ᎤᎾᏤᎵ ᎦᏬᏂᎯᏍᏗ ᎤᏃᏴᎬ. Walt Disney ᎾᏍᎩ ᎾᏍᏇ ᎪᏢᏅᎯ ᏔᎵ ᎦᏬᏂᏍᎬ ᎩᎤᎦ, [[Chip and Dale|ᎤᏆᏔᎸᏓ ᎠᎴ ᎧᏂᎬᎾᎥ]], ᎾᎯᏳᎨᏒ ᎯᎠ 1940'.
-
-===ᏐᎢ===
-ᎠᏍᏆᏂᎪᏒᏗ, ᏌᏊ ᎯᎠ ᎠᎦᏓᏅᏖᏗ ᎭᏫᎾᏗᏢ ᎯᎠ [[Flash cartoon|ᎤᏥᏍᏓᎷᎩᏍᎬ ᎠᏂᎶᏁᏍᎬ]] "[[Happy Tree Friends|ᎠᎵᎮᎵᏍᏗ ᏡᎬ ᏧᎾᎵᎢ]]" ᎨᏒᎢ ᎩᎦᎨ ᎢᏳᏍᏗ ᎩᎤᎦ (ᎾᏍᎩᎾᎢ ᎯᎠ ᏩᏗᏅᏗ ᎤᎾᏠᏯᏍᏗ colourful ᎠᏙᎯ ᎢᎾᎨ ᎡᎿᎢ ᎡᎥ.)
-
-== ᎧᏅᏑᎸ ==
-<gallery>
-Image:leastchipmunk.jpg|Least Chipmunk, ''Tamias minimus''
-File:Least Chipmunk1com.jpg|Least Chipmunk (''Tamias minimus'')
-Image:Streifenhoernchen.jpg|[[Siberian Chipmunk]] ''Tamias sibiricus''
-Image:Chipmunkcanada rs 300x.jpg|Chipmunk, Western Canada, Rocky Mountains
-</gallery>
-
-==ᏫᏓᏎᎸᎢ==
-
-*Nichols, ᎦᎳᏅᎯ D. ᎠᎴ ᎢᏴ ᎠᏂᏙᎾᎥ Nyholm (1995). ''ᎦᏟᏌᏅ ᎦᎴᏴᏔᏅ ᏗᏕᏠᏆᏍᏙᏗ Minnesota Ojibwe''. Minneapolis: ᏗᏕᎶᏆᏍᏗ Minnesota ᏗᏂᎴᏱᏗᏍᎩ.
-
-==ᎤᏓᏎᎦᏤᏗ ᏗᏕᎬᏔᏛ==
-
-*[http://www.etymonline.com/index.php?search=chipmunk&searchmode=none Etymology Online: Chipmunk]
-
-[[Category:Squirrels]]
-
-[[cr:ᔖᔖᑯᓂᑯᒑᔥ]]
-[[da:Jordegern]]
-[[de:Streifenhörnchen]]
-[[en:Chipmunk]]
-[[es:Tamias]]
-[[fa:سمورچه]]
-[[fi:Maaoravat]]
-[[fr:Tamia]]
-[[he:טמיאס]]
-[[hi:चिपमंक]]
-[[hu:Csíkosmókus]]
-[[it:Tamias]]
-[[ja:シマリス]]
-[[kk:Борша тышқан]]
-[[ko:다람쥐속]]
-[[kv:Визяорда]]
-[[lt:Burundukai]]
-[[mn:Жирх]]
-[[nl:Wangzakeekhoorns]]
-[[nv:Hazéítsʼósii]]
-[[pdc:Fensemaus]]
-[[pl:Pręgowce]]
-[[pt:Tâmia]]
-[[ru:Бурундуки]]
-[[sah:Моҕотойдор уустара]]
-[[simple:Chipmunk]]
-[[sv:Jordekorrar]]
-[[uk:Бурундук]]
-[[zh:花栗鼠]]
-[[zh-min-nan:Hoe-le̍k-chhí]]
+#REDIRECT [[ᎩᏳᎦ]]
