--- a/ᏩᏓᏚᎦ.mw
+++ b/ᏩᏓᏚᎦ.mw
@@ -87,7 +87,6 @@ Dragonflies ᎤᎭ ᎤᏙᎯᏳ ᎣᏍᏛ ᎠᎪᏩᏛᏗ ᎤᏍᏆᎸᎲ ᎤᎾ
 ==ᏫᏓᏎᎸᎢ==
 <references/>
 
-
 == ᎤᏓᏎᎦᏤᏗ ᏗᏕᎬᏔᏛ ==
 {{commonscat|Anisoptera}}
 *[http://www.cirrusimage.com/odonata.htm Dragonflies of North America - diagnostic photos and information]
@@ -98,8 +97,7 @@ Dragonflies ᎤᎭ ᎤᏙᎯᏳ ᎣᏍᏛ ᎠᎪᏩᏛᏗ ᎤᏍᏆᎸᎲ ᎤᎾ
 * [http://www.npwrc.usgs.gov/resource/distr/insects/dfly/dflyusa.htm Dragonflies and Damselflies (Odonata) of the United States]
 * [http://www.greenexplorer.com/ Green Explorer - Checklists, photogallery,... Dragonflies of Kerala, South India.]
 
-[[Category:Odonata]]
-[[Category:Biological pest control agents]]
+[[Category:ᏨᏍᎪᏱ]]
 
 [[af:Naaldekoker]]
 [[bat-smg:Laumžėrgis]]
