--- a/ᎢᏯ.mw
+++ b/ᎢᏯ.mw
@@ -64,9 +64,8 @@
 * [http://www.pumpkinnook.com/howto/variety.htm Pumpkins - Lots and lots of Varieties!] - ᏴᏩᏁᎬ ᎢᏯ varieties, ᎠᏓᏁᎳᏅ ᎾᎥᎢ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ. 
 * [http://oregonstate.edu/dept/hort/233/squash.htm Squashes and Pumpkins] - Oregon ᎤᏔᏂᏗ ᎦᏙᎯ ᏗᏕᎶᏆᏍᏗ. ᎠᏓᏁᎳᏅ ᎾᎥᎢ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ.
 
-[[Category:Squashes and pumpkins|*]]
-[[Category:Cucurbitaceae]]
-[[Category:Vegetable-like fruits]]
+[[Category:Plantae]]
+[[Category:ᎠᎵᏍᏓᏴᏗ ᎠᎴ ᎠᏗᏔᏍᏗ]]
 
 [[ar:قرع]]
 [[bg:Тиква]]
