--- a/ᏍᏈᏍᏗ_ᏗᎾᎳᏍᎬᏍᎩ.mw
+++ b/ᏍᏈᏍᏗ_ᏗᎾᎳᏍᎬᏍᎩ.mw
@@ -72,7 +72,7 @@ Image: Dryas julia caterpillar.JPG|''Dryas julia''
 Image: Sphinx_ligustri_03_(HS).jpg|''Sphinx ligustri''
 </gallery>
 
-[[Category:Lepidoptera]]
+[[Category:ᏨᏍᎪᏱ]]
 
 [[ay:Laqatu]]
 [[ca:Eruga]]
