--- a/ᎧᏄᎦᎸ.mw
+++ b/ᎧᏄᎦᎸ.mw
@@ -1,9 +1,9 @@
 {{Taxobox
 | color = lightgreen
-| name = Blackberry
+| name = ᎧᏄᎦᎸ
 | image = Blackberry fruits10.jpg
 | image_width = 250px
-| image_caption = Blackberries on a bush
+| image_caption = ᎧᏄᎦᎸ
 | regnum = [[Plant|ᎦᎪᏘ]]ae
 | divisio = [[Flowering plant|Magnoliophyta]]
 | classis = [[Magnoliopsida]]
@@ -39,7 +39,6 @@ and hundreds more microspecies<br>
 
 ᎯᎠ ᎧᏄᎦᎸ ᏰᎵᏇ ᎾᏍᏋ ᎤᎶᏒᏍᏗ ᏂᎨᏒᎾ deduced ᎤᎭ ᏭᏪᏙᎢ consumed ᎾᎥᎢ ᎠᏂᏴᏫ ᎾᏍᎩᎾᎢ ᎯᎸᏍᎩ ᎢᏯᎦᏴᎵ ᏧᏕᏘᏴᏓ, ᎠᎴ ᎾᎿᎢ ᎨᏒᎢ, ᎭᏫᎾᏗᏢ ᏯᏛᎾ ᎤᏙᎯᏳ, ᏗᏘᏲᎯᎯ ᎪᎯᏳᏙ ᏂᏛᎴᏅᏓ ᎯᎠ ᎠᏩᏛᏗ [[Iron Age|ᏔᎷᎩᏍᎩ lyudetiyvda]] [[Haraldskaer Woman|Haraldskaer ᎠᎨᏴ]] Ꮎ ᎤᏂᎪᏗᏗ ᎨᏒᎩ consumed 2500 ᏧᏕᏘᏴᏓ ᎢᏳ ᏥᎨᏒ.
 
-
 ===ᎠᏓᎾᏅᏗ cultivars===
 [[image:Black Butte blackberry.jpg|left|thumb|ᎬᎿᎨ ᏂᎦᏛᎢ ᎧᏄᎦᎸ.]]
 
@@ -70,11 +69,8 @@ Image:Spines on blackberry.jpg|Thorns
 *[http://www.uga.edu/fruit/rubus.htm Botanical Information]
 *[http://plants.usda.gov/java/ClassificationServlet?source=profile&symbol=RUBUS&display=63 USDA Plants Classification Report]
 
-[[Category:Fruit]]
-[[Category:Rubus]]
-[[Category:Rosaceae]]
-[[Category:Grocer's Encyclopedia]]
-[[Category:Invasive species]]
+[[Category:Plantae]]
+[[Category:ᎠᎵᏍᏓᏴᏗ ᎠᎴ ᎠᏗᏔᏍᏗ]]
 
 [[ar:عليق]]
 [[az:Böyürtkən]]
