--- a/ᏎᎷ_ᎦᏚ.mw
+++ b/ᏎᎷ_ᎦᏚ.mw
@@ -1,6 +1,5 @@
-[[Image:Cornbread.jpg|right]]
-
-'''ᏣᎷᎦ''' ᎨᏒᎢ ᏗᏍᏆᎸᏙᏗ ᏚᏙᎥ ᎾᏍᎩᎾᎢ ᏂᎦᎵᏍᏗᏍᎬᎫ ᏎᏍᏗ [[ᎤᎵᏍᏓ ᎦᏚ]](ᎦᏚ leavened chemically, ᎤᏟ ᎬᏰᎸᏗ ᎬᎾᏬᏍᎬ ᎾᎥᎢ ᎦᏚ ᎠᏑᏴᏗ) ᎢᎦᎢ ᏕᎨᏒᎢ [[ᏎᎷ ᎢᏌ]].  ᏥᏄᏍᏗ [[ᏎᎷ]] (ᎾᏍᎩ ᎾᏍᏇ ᎤᎾᏅᏛ ᏥᏄᏍᏗ ᏎᎷ) ᎨᏒᎢ ᎾᏰᎯᏯ [[ᏧᎦᎾᏮ ᎠᎹᏰᎵ]], ᎾᏍᎩ ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏍᏆᏂᎪᎯᏍᏗ Ꮎ ᎯᎠ ᏧᏓᎴᏅᏓ ᏧᏓᎴᏅᏓ ᏣᎷᎦ ᎠᎴ ᎤᏟ ᎢᎦᎢ ᎬᏂᎨᏒ ᏄᏍᏛᎢ ᎭᏫᎾᏗᏢ ᎯᎠ ᎢᏤ ᎡᎶᎯ.  ᏱᏂᎬᏛᎾ, [[polenta]] ᎨᏒᎢ ᎤᏓᏅᏗ ᏣᎷᎦ Ꮎ ᎨᏒᎢ ᏧᏣᏔᏊ ᎭᏫᎾᏗᏢ [[Italy]].
+'''ᏣᎷᎦ''' ᎨᏒᎢ ᏗᏍᏆᎸᏙᏗ ᏚᏙᎥ ᎾᏍᎩᎾᎢ ᏂᎦᎵᏍᏗᏍᎬᎫ ᏎᏍᏗ [[ᎤᎵᏍᏓ ᎦᏚ]] (ᎦᏚ leavened chemically, ᎤᏟ ᎬᏰᎸᏗ ᎬᎾᏬᏍᎬ ᎾᎥᎢ ᎦᏚ ᎠᏑᏴᏗ) ᎢᎦᎢ ᏕᎨᏒᎢ [[ᏎᎷ ᎢᏌ]].  ᏥᏄᏍᏗ [[ᏎᎷ]] (ᎾᏍᎩ ᎾᏍᏇ ᎤᎾᏅᏛ ᏥᏄᏍᏗ ᏎᎷ) ᎨᏒᎢ ᎾᏰᎯᏯ [[ᏧᎦᎾᏮ ᎠᎹᏰᎵ]], ᎾᏍᎩ ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏍᏆᏂᎪᎯᏍᏗ Ꮎ ᎯᎠ ᏧᏓᎴᏅᏓ ᏧᏓᎴᏅᏓ ᏣᎷᎦ ᎠᎴ ᎤᏟ ᎢᎦᎢ ᎬᏂᎨᏒ ᏄᏍᏛᎢ ᎭᏫᎾᏗᏢ ᎯᎠ ᎢᏤ ᎡᎶᎯ.  ᏱᏂᎬᏛᎾ, [[polenta]] ᎨᏒᎢ ᎤᏓᏅᏗ ᏣᎷᎦ Ꮎ ᎨᏒᎢ ᏧᏣᏔᏊ ᎭᏫᎾᏗᏢ [[Italy]].
+[[Image:Cornbread.jpg|thumb|ᏎᎷ ᎦᏚ]]
 
 ==ᎧᏃᎮᏍᎩ==
 ᏣᎷᎦ ᏥᏄᏍᏛᎩ ᎢᎬᏱ ᎪᎷᏩᏛᏓ ᎾᎯᏳᎨᏒ ᎯᎠ [[ᏳᎳᏛ]] ᎤᏂᎦᏛᎲᏍᎩ ᎤᏴᏢ ᎠᎺᎵᎨ.  [[Native Americans|ᎾᏰᎯᏯ ᏴᏩᏁᎬ]] ᎨᏒᎩ ᎬᏗᏍᎬᎢ ᎦᏙᎯ ᏎᎷ ᎾᏍᎩᎾᎢ ᎠᎾᏓᏍᏓᏴᎲᏍᎬ ᎦᏅᎯᏓ ᎤᏓᎷᎸ ᎯᎠ European ᏗᎦᏣᏄᎶ ᎤᎾᏣ ᎤᎷᏨᎩ ᎭᏫᎾᏗᏢ ᎯᎠ ᎢᏤ ᎡᎶᎯ.  Europeans ᎠᏰᎲ ᎬᏙᏗ ᎯᎠ ᎾᎥᎢ ᏧᎬᏩᎶᏗ ᎦᎷᎩ ᎾᏍᎩᎾᎢ ᎠᎵᏍᏓᏴᏗ, ᎠᏛᏍᎩ ᏎᎷ ᎢᏌ ᎾᎾᎯ ᏣᎷᎦ.  ᏣᎷᎦ ᏥᏄᏍᏛᎩ ᎤᏂᎸᏉᏗ ᎾᎯᏳᎨᏒ ᎯᎠ [[American Civil War|ᏴᏩᏁᎬ ᎤᎵᎶᎯ ᎢᎬᏁᎯ ᏓᏄᏩ]] ᎢᎬᏂᏏᏍᎩ ᎾᏍᎩ ᏥᏄᏍᏛᎩ ᎤᏙᎯᏳ ᎤᏍᏗ ᏧᎬᏩᎶᏗ ᎠᎴ ᏰᎵᏇ ᎾᏍᏋ ᎪᏢᏅᎯ ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᏄᏓᎴᎿᎥ ᏚᏙᏢᏒ.  ᎾᏍᎩ ᏰᎵᏇ ᎾᏍᏋ ᎠᏛᏍᎩ ᎾᎾᎯ ᎦᎸᎳᏗ-ᎠᎵᏌᎳᏗᏍᎬ, ᎦᏅᏙᎬ loaves ᎠᎴ ᏄᏦᏍᏛᎾᏊ ᎪᎢᎯ ᎬᏂᏍᏙᏗ ᎾᏍᎩᎾᎢ ᎦᏣᏄᎳ ᎠᎵᏍᏓᏴᏗ.
