--- a/ᎠᎾᎦᎵᏍᎩ_ᎦᏂᏱᏍᎩ.mw
+++ b/ᎠᎾᎦᎵᏍᎩ_ᎦᏂᏱᏍᎩ.mw
@@ -38,13 +38,8 @@ Nonmetal ᎢᏧᏓᎴᎩ ᎠᎴ ᎤᏟ ᎢᎦᎢ ᎬᏩᎶᏒᏍᏗ ᎭᏫᎾᏗ
 
 == ᎤᏓᏎᎦᏤᏗ ᏕᎬᏔᏛ ==
 * [http://www.kitcometals.com/ Live metal prices - USD/lb]
-{{wiktionary}}
 
-[[Category:Condensed matter physics]]
-[[Category:Metallic elements|*]]
-[[Category:Metals|*]]
-[[Category:Metalworking]]
-[[Category:Numismatics]]
+[[Category:ᎠᎾᎦᎵᏍᎩ ᎦᏂᏱᏍᎩ| ]]
 
 [[af:Metaal]]
 [[an:Metal]]
