--- a/ᎾᏳ.mw
+++ b/ᎾᏳ.mw
@@ -40,7 +40,6 @@
 ᏴᏫ ᎤᎭ ᏭᏪᏙᎢ ᏂᎬᎢ ᎠᏥᏐᏅᏅᎯ ᎠᎴ ᎢᏧᎳᎭ ᎠᏥᎸᎩ ᎤᎶᏐᏅ digging ᎾᏳ "ᎤᏍᏔᎦᎳᏱ" ᎭᏫᎾᏗᏢ ᎡᏆ ᏂᎦᏛᎢ,  sandhills, ᎠᎴ ᎢᏧᎳᎭ ᎾᎿ beaches ᎯᎳᎪ ᎢᏳ ᎯᎠ ᎤᏍᏔᎦᎳᏱ ᎠᎴ ᎧᏂᎬᎾᎥ collapsed ᎾᏍᎩ ᎠᏂ.
 
 ==ᎠᎪᏩᏛᏗ ᎾᏍᎩ ᎾᏍᏇ==
-{{wiktionary}}
 {{Commons|Category:Sand}}
 *[[Quicksand]]
 *[[Dry quicksand|ᎤᎧᏲᏗ quicksand]]
@@ -51,10 +50,7 @@
 *[[White Sands National Monument|ᎤᏁᎬ ᎯᎸᏍᎩ ᏅᏯ ᎬᎾᏕᎾ ᏂᎦᏛᎢ]]
 *[[Falling Sand Game|ᎦᎶᏍᎬ ᎾᏳ ᏗᏁᎶᏗᎢ]]
 
-[[Category:Granular materials]]
-[[Category:Pedology]]
-[[Category:Sediments]]
-[[Category:Sedimentology]]
+[[Category:ᎡᎶᎯ]]
 
 {{Link FA|nl}}
 
