--- a/ᎠᎹᏍᎧᎦᎯ.mw
+++ b/ᎠᎹᏍᎧᎦᎯ.mw
@@ -72,7 +72,7 @@ Image:Victoriafälle.jpg|[[Victoria Falls]] in [[Africa]].
 * [http://vizeses.lap.hu/ Waterfalls of the world, links]
 * [http://groups.yahoo.com/group/Waterfalltalk WaterfallTalk Mailing List]
 
-[[Category:Waterfalls|*]]
+[[Category:ᎠᎹ]]
 
 [[an:Salto d'augua]]
 [[ar:شلال]]
