--- a/ᎦᎷᎾᏗ.mw
+++ b/ᎦᎷᎾᏗ.mw
@@ -44,10 +44,9 @@
 * ᎤᎾᏛᏁᎸᏗ Ꮎ ᎾᎿᎢ ᎠᎴ Ꮭ ᎠᏎᎸᎯ ᎾᎿ ᎦᏙ ᎤᏍᏗ ᎢᏧᎳ ᏰᎵᏇ ᎪᎷᏩᏛᏗ ᎠᎴ ᎠᏍᏆᏗᏍᏗ, ᏂᎯ ᏰᎵᏇ ᎯᏁᎩ, "ᎯᎠ ᎦᎷᎾᏗ ᎤᏤᎵ ᎯᎠ ᎠᏎᎸᎯ!"
 * "ᏌᎪᏂᎨ ᎦᎷᎾᏗ ᎠᎾᏓᏅᏖᏍᎬ" ᎤᏅᏔᏂᏓᏍᏗ ᏓᎦᎷᏥ ᎦᎸᎳᏗᏢ ᎬᏙᏗ ᎠᏓᏩᏛᎯᏙᎯ ᎠᏓᏅᏖᏍᎬ ᏄᏠᏯᏍᏛᎾ ᎠᎴᏂᏙᎲ restricted ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᏗᏙᎳᎩ (ᎤᏠᏱ [[brainstorming]]); ᎭᏫᎾᏗᏢ ᎾᏍᎩᎾ, optimistic ᎠᎦᏲᎳᏗᏍᏗ ᎨᏒᎢ ᎪᏢᏅᎯ Ꮎ ᎾᎿᎢ ᏫᎵ ᎾᏍᏋ Ꮭ ᎠᏲᎠᏍᏗᏍᎩ ᎠᎴ ᏗᎦᏘᎸᏍᏗ implementation ᎯᎠ ᎠᏓᏅᏖᏍᎬ.
 * "ᎯᎠ ᎦᎷᎾᏗ ᎨᏒᎢ ᎦᎶᏍᎬ" ᎨᏒᎢ ᏧᏣᏔᏊ ᎢᎦᏪᏛ Ꮎ ᎨᏒᎢ ᎬᏔᏅᎯ ᎯᎳᎪ ᎢᏳ ᏂᎦᎵᏍᏗᏍᎬᎫ ᏗᏑᏰᏍᏗ ᎤᏐᏅᎢ ᎨᏒᎢ ᏂᎦᎳᏍᏗᏍᎬ. ᎪᎯ ᎤᎷᏨᎩ ᏂᏛᎴᏅᏓ ᎯᎠ ᎧᏃᎮᏍᎩ [[The Sky Is Falling|ᏥᏔᎦ ᎤᏍᏗ]]
-{{Commons|Sky|Sky}}
+{{Commons|Sky|ᎦᎷᎾᏗ}}
 
 == ᎠᎪᏩᏛᏗ ᎾᏍᎩ ᎾᏍᏇ ==
-
 * [[ᏗᏗᎦᎴᏴ ᎦᎷᎾᏗ ᎤᏣᏘᎾ]] — ᎦᏙᏃ ᎯᎠ ᎦᎷᎾᏗ ᎨᏒᎢ ᏌᎪᏂᎨ.
 
 == ᎤᏓᏎᎦᏤᏗ ᏗᏕᎬᏔᏛ ==
@@ -56,8 +55,8 @@
 * [http://omarchowdhury.com/2006/06/19/why-is-the-sky-blue/ Why is the sky blue?]
 __NOEDITSECTION__
 
-[[Category:Meteorology]]
-[[Category:Astronomy]]
+[[Category:ᏙᏯᏗᎳ ᏄᏍᏗᏓᏅ]]
+[[Category:ᏗᎦᎸᎳᏗ]]
 
 [[am:ሰማይ]]
 [[ar:سماء]]
