--- a/ᏭᏕᎵᎬ.mw
+++ b/ᏭᏕᎵᎬ.mw
@@ -1,4 +1,4 @@
-[[File:Nightfall europe-and-afrika 20050507-184500.jpg|thumb|250px| ᏧᏠᎯᏍᏗ ᎾᏍᎩᏯᎢ ᎠᎾᏓᏎᎮᎲᎢ ᎯᎠ [[Terminator (solar)|terminator]] dividing ᏒᏃᏱ ᏂᏛᎴᏅᏓ ᎢᎦ, ᎠᏓᏟᏒᎢ ᏗᎦᎾᏗᎯᏍᏗ [[Europe]] ᎠᎴ [[Africa]]. ᎾᎿ ᎾᎿ ᎯᎠ ᎦᏚᎢ ᎯᎠ ᎡᎶᎯ ᎨᎳᏛᏍᏗ ᎪᎯ terminator ᏫᎵ ᎠᎪᏩᏛᏗ ᏭᏕᎵᎬ.]]
+[[File:Nightfall europe-and-afrika 20050507-184500.jpg|thumb|250px| ᏧᏠᎯᏍᏗ ᎾᏍᎩᏯᎢ ᎠᎾᏓᏎᎮᎲᎢ ᎯᎠ [[Terminator (solar)|terminator]] dividing ᏒᏃᏱ ᏂᏛᎴᏅᏓ ᎢᎦ, ᎠᏓᏟᏒᎢ ᏗᎦᎾᏗᎯᏍᏗ [[ᏳᎳᏛ]] ᎠᎴ [[ᎬᎿᎨᏍᏛ]]. ᎾᎿ ᎾᎿ ᎯᎠ ᎦᏚᎢ ᎯᎠ ᎡᎶᎯ ᎨᎳᏛᏍᏗ ᎪᎯ terminator ᏫᎵ ᎠᎪᏩᏛᏗ ᏭᏕᎵᎬ.]]
 [[File:Red sunset.jpg|thumb|250px| ᎩᎦᎨ ᏭᏕᎵᎬ ᎦᎾᏄᎪᏨᎢ]]
 
 '''ᏭᏕᎵᎬ''', ᎾᏍᎩ ᎾᏍᏇ ᎤᏯᏅᎲ '''ᏒᎯᏰᏱ''' ᎭᏫᎾᏗᏢ ᎢᎦᏛ [[American English|ᏴᏩᏁᎬ ᎩᎵᏏ]] [[dialect|ᎦᏬᏂᎯᏍᏗ]], ᎨᏒᎢ ᎯᎠ iyuwakodi ᎾᎾᎢ ᎦᏙ ᎤᏍᏗ ᎯᎠ [[Sun|ᏅᏙ ᎢᎦ ᎡᎯ]] ᎠᏗᏍᎦᎶᏗ ᎡᎳᏗᏢ ᎯᎠ [[horizon|ᎤᏚᎳᏗ]] ᎭᏫᎾᏗᏢ ᎯᎠ [[west|ᏭᏕᎵᎬ]]. ᎾᏍᎩ ᎢᏳᏗᎾ ᎾᏍᎩ ᏂᎨᏒᎾ ᎾᏍᏋ ᎤᏦᎠᏎᏔᏅ ᎬᏙᏗ [[dusk|ᏒᎯᏰᏱ]], ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎯᎠ ᎪᏍᏓᏱ ᎾᎾᎢ ᎦᏙ ᎤᏍᏗ ᎤᎳᏏᎬᎢ ᎦᎶᏍᎦ, ᎢᎦᏛ iyuwakodi ᎤᎶᏐᏅ ᎯᎠ ᎠᏓᎴᏂᏍᎬ [[twilight|ᎤᏒᎯᏱ]] ᎯᎳᎪ ᎢᏳ ᎯᎠ ᏅᏙ ᎢᎦ ᎡᎯ ᎤᏩᏌᏊ ᏗᏫᏒᏗ. '''Sunclipse''' ᎨᏒᎢ ᎯᎠ ᎧᏁᏨ ᏂᎦᏛ ᎠᏓᏁᏟᏴᏍᏗ ᏗᏓᏂᎸᏨᎯ ᎾᎥᎢ [[Buckminster Fuller|Buckminster Fuller']] ᏏᏓᏁᎸᎯ ᏅᎪᏢᎯᏐᏗ ᎯᎠ geocentric ᎠᎴᏂᏍᎬ ''ᏭᏕᎵᎬ'' ᎠᎴ ᎤᏟ ᎢᏲᏍᏛ ᎠᏓᏎᎮᏗ ᎣᏓᏅᏛ, ᏥᏄᏍᏗ ᎯᎠ ᏅᏙ ᎢᎦ ᎡᎯ ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᎯᎠ ᎠᏰᎸ ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎤᏙᎯᏳᎯᏯ ᎠᏓᏅ ᎭᏫᎾᏗᏢ ᏭᏕᎵᎬ.
@@ -22,17 +22,15 @@
 *[[Day length|ᎢᎦ ᏂᎦᏅᎯᏒ]]
 *[[Diffuse sky radiation|ᏗᏗᎦᎴᏴ ᎦᎷᎾᏗ ᎤᏣᏘᎾ]]
 *[[twilight|ᎤᏒᎯᏱ]]
+
 == ᎤᏓᏎᎦᏤᏗ ᏗᏕᎬᏔᏛ ==
 {{commons|Sunset}}
 * [http://www.sunrisesunset.com/ Sunrise and sunset calculator]
 * [http://math.ucr.edu/home/baez/physics/General/BlueSky/blue_sky.html Full physical explanation in simple terms]
 * [http://mypage.bluewin.ch/hyglarner/herbert/articles/Season.html Calculation of Length of Day] (ᏎᏍᏗ ᎠᎴ Graphs)
 
-[[Category:Solar phenomena]]
-[[Category:Earth phenomena]]
-[[Category:Symbols]]
-[[Category:Parts of a day]]
-[[Category:Sunset|*]]
+[[Category:ᎤᏁᎳᏅ ᎤᏬᏢᏅ]]
+[[Category:ᎢᎿᏩᎪᏗ]] 
 
 [[an:Escureixito]]
 [[ar:غروب]]
