--- a/ᏧᎾᎦ.mw
+++ b/ᏧᎾᎦ.mw
@@ -53,14 +53,13 @@
 * [[Trout Quintet|ᏧᎾᎦ ᎯᏍᎩ ᎢᏯᎯᏍᎩ ᎢᏯᏂᎢ]], ᎪᏪᎳᏅ ᎠᎪᎵᏰᏗ ᎾᎥᎢ [[Franz Schubert]]. 
 
 ==ᏫᏓᏎᎸᎢ==
-* <cite>ᏧᎾᎦ ᎠᎴ ᏎᎼᏂ ᎤᏴᏢ ᎠᎺᎵᎨ</cite>, Robert J. Behnke, ᏚᏟᎶᏍᏔᏅ ᎾᎥᎢ ᏧᏳᎪᏗᎭ R. Tomelleri, ᎯᎠ ᎠᏎᏊᎢ ᏗᏂᎴᏱᏗᏍᎩ, 2002, hardcover, 359 ᏚᏆᏓᏛ, ISBN 0-7432-2220-2
-{{cookbook}}
+* <cite>ᏧᎾᎦ ᎠᎴ ᏎᎼᏂ ᎤᏴᏢ ᎠᎺᎵᎨ</cite>, Robert J. Behnke, ᏚᏟᎶᏍᏔᏅ ᎾᎥᎢ ᏧᏳᎪᏗᎭ R. Tomelleri, ᎯᎠ ᎠᏎᏊᎢ ᏗᏂᎴᏱᏗᏍᎩ, 2002: 359 ᏚᏆᏓᏛ, ISBN 0-7432-2220-2.
 
 ==ᎤᏓᏎᎦᏤᏗ ᏗᏕᎬᏔᏛ==
 *Japanese ᏧᎾᎦ: [http://www.amago.jp.lv/index2.html Trouts and Seasons of the Mountain Village]
 
 [[Category:ᎠᏣᏗ]]
-[[Category:Salmonidae]]
+[[Category:ᎠᎵᏍᏓᏴᏗ ᎠᎴ ᎠᏗᏔᏍᏗ]]
 
 [[ang:Sceota]]
 [[ar:أسماك التروتة]]
