--- a/ᏴᏩᏁᎬ_ᏥᏉᏉ.mw
+++ b/ᏴᏩᏁᎬ_ᏥᏉᏉ.mw
@@ -66,11 +66,7 @@ Image:AmericanRobinNestWithEggs.jpg|Nest with four eggs (the nest is approximate
 * [http://ibc.hbw.com/ibc/phtml/especie.phtml?idEspecie=5989 American Robin videos] ᎾᎿ ᎯᎠ ᎧᎾᏁᏍ ᏥᏍᏆ ᎤᏓᏂᏝᏅ
 *[http://www.vivanatura.org/sounds/American%20Robin%20(Turdus%20migratorius).wav American_Robin.wav] - .wav ᎠᏝᎥᎢ ᎯᎠ ᏥᏍᏆ ᎤᏤᎵ ᎧᏃᎩᏍᏗ.
 
-
-[[Category:Turdidae]]
-[[Category:Migratory birds (Western hemisphere)]]
-[[Category:United States state birds]]
-[[Category:Heraldic birds]]
+[[Category:ᏥᏍᏆ]]
 
 [[ar:سمنة أمريكي شمالي]]
 [[br:Moualc'h-Amerika]]
