--- a/ᎠᏥᎾ.mw
+++ b/ᎠᏥᎾ.mw
@@ -1,6 +1,6 @@
 {{Taxobox
 | color = lightgreen
-| name = Cedars
+| name = ᎠᏥᎾ
 | image = Cedre-large.jpg
 | image_width = 240px
 | image_caption = A cedar in a French garden
@@ -48,13 +48,9 @@
 * [http://www.conifers.org/pi/ce/index.htm Gymnosperm Database - Cedrus]
 * Greuter, W., Burdet, H. M., & ᎦᏅᎯᏓ, G. (eds.), (1984). ''Med-Checklist – ᎤᏓᏚᎯᏌᏘ ᏙᎪᏩᎸ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ digakohidi ᎯᎠ circum-ᎠᏰᎵ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ''.
 * ᎯᎠ ᎠᏛᎯᏍᏙᏗ ᎠᎴ dispersal ᎠᏥᎾ ᏒᏙᏂ ᎠᎴ ᎤᎦᏔ. ''ᎠᏰᎵ ᏚᎾᏙᏢᏒ Dendrology ᎤᎾᏙᏢᎯ ᎠᏓᏠᎯᏍᏗ'' 1993: 43-46 (1994).
-* Güner, ., Özhatay, N., Ekim, T., & Başer, K. H. C. (ᎦᎾᏄᎪᏫᏒ.). 2000. ''ᎦᎪᏘ ᎬᎾ ᎠᎴ ᎯᎠ ᎧᎸᎬ Aegean ᎯᎸᏍᎩ ᎠᎹᏰᎵ'' 11 (ᎠᎧᎵᏏᏌᏅᎯ 2): 5-6. Edinburgh ᏗᏕᎶᏆᏍᏗ ᏗᏂᎴᏱᏗᏍᎩ. ISBN 0-7486-1409-5
+* Güner, Özhatay, N., Ekim, T., ᎠᎴ Başer, K. H. C. (ᎦᎾᏄᎪᏫᏒ.). 2000. ''ᎦᎪᏘ ᎬᎾ ᎠᎴ ᎯᎠ ᎧᎸᎬ Aegean ᎯᎸᏍᎩ ᎠᎹᏰᎵ'' 11 (ᎠᎧᎵᏏᏌᏅᎯ 2): 5-6. Edinburgh ᏗᏕᎶᏆᏍᏗ ᏗᏂᎴᏱᏗᏍᎩ. ISBN 0-7486-1409-5.
 
-{{Pinaceae}}
-
-[[Category:Pinaceae]]
-[[Category:Incense]]
-[[Category:Perfumery]]
+[[Category:ᏡᎬ]]
 
 [[ar:أرز (شجرة)]]
 [[be:Кедр]]
