--- a/ᎠᎳᏍᏚᎶ.mw
+++ b/ᎠᎳᏍᏚᎶ.mw
@@ -1,5 +1,5 @@
 [[File:Turbanned man.jpg|thumb| Sikh ᎠᏍᎦᏯ ᏙᏄᏭᎢ ᎠᎳᏍᏚᎶ]]
-ᎯᎠ '''ᎠᎳᏍᏚᎶ''' (ᏂᏛᎴᏅᏓ ᎯᎠ [[Persian language|Persian]] {{lang|fa|دلبنت}}, ''dulband'' ᎾᎿ ᎢᏗᏢ ᎯᎠ [[Turkish language|Turkish]] ''{{lang|tr|tülbent}}'') ᎨᏒᎢ [[headgear|ᎫᏢᎥᏍᎬ]], [[Asian]] ᎠᏓᎴᏂᏍᎬ, ᎤᏠᏯᏍᏛ ᎦᏅᎯᏓ [[scarf|ᎠᎵᏍᏆᏃᏍᏙᏗ]] ᎠᏥᏐᏅᏅ ᎦᏌᏆᎸ ᎯᎠ [[head|ᎠᏍᎪᎵ]] ᎠᎴ ᎭᏫᎾᏗᏢ [[hat|alisquetuwo]]. ᎯᎠ ᎠᎳᏍᏚᎶ ᎦᎷᎦ ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᎦᎶᏄᎮᏛ ᎠᎴ ᏂᏕᎬᎢ ᎠᎴ ᏗᎧᏃᏗ ᎠᎳᏍᏚᎶ ᏧᏓᎴᎾᎯ, ᎬᏙᏗ ᎯᎠ ᎠᏄᏬ ᎤᏤᎵ ᏂᎦᏅᎯᏒ ᎢᏅᎯ ᎢᏳᏓᎵ ᎤᏂᎪᏗᏗ 5 ᎠᏎᎯᎯ.
+ᎯᎠ '''ᎠᎳᏍᏚᎶ''' (ᏂᏛᎴᏅᏓ ᎯᎠ [[Persian language|Persian]] دلبنت, ''dulband'' ᎾᎿ ᎢᏗᏢ ᎯᎠ [[Turkish language|Turkish]] ''{{lang|tr|tülbent}}'') ᎨᏒᎢ [[headgear|ᎫᏢᎥᏍᎬ]], [[Asian]] ᎠᏓᎴᏂᏍᎬ, ᎤᏠᏯᏍᏛ ᎦᏅᎯᏓ [[scarf|ᎠᎵᏍᏆᏃᏍᏙᏗ]] ᎠᏥᏐᏅᏅ ᎦᏌᏆᎸ ᎯᎠ [[head|ᎠᏍᎪᎵ]] ᎠᎴ ᎭᏫᎾᏗᏢ [[hat|alisquetuwo]]. ᎯᎠ ᎠᎳᏍᏚᎶ ᎦᎷᎦ ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᎦᎶᏄᎮᏛ ᎠᎴ ᏂᏕᎬᎢ ᎠᎴ ᏗᎧᏃᏗ ᎠᎳᏍᏚᎶ ᏧᏓᎴᎾᎯ, ᎬᏙᏗ ᎯᎠ ᎠᏄᏬ ᎤᏤᎵ ᏂᎦᏅᎯᏒ ᎢᏅᎯ ᎢᏳᏓᎵ ᎤᏂᎪᏗᏗ 5 ᎠᏎᎯᎯ.
 
 ᎢᎬᏱ [[Persians|ᎠᏂᏙᎾᎥ]] ᎤᎿᏩᎥᎩ ᏒᏙᏂ ᎠᎵᏍᏚᎶ ᏱᏓᏟᎶᏍᏔᏅ yelule ᎾᎥᎢ ᎦᏚ ᎠᏄᏬᏍᏗ ᎠᏄᏬ, ᎦᏙ ᎤᏍᏗ ᎠᎾᏍᎬᏘ ᎾᏍᏋ ᎠᎦᏎᏍᏔᏅ ᏌᏊ ᎯᎠ ᎠᏓᎴᏂᏍᎬ ᎯᎠ ᎪᎯᏊ ᎢᏴ ᏥᎩ ᎠᎳᏍᏚᎶ. ᎯᎠ ᎠᎳᏍᏚᎶ ᏄᏛᏁᎸ ᎾᏍᎩ ᏂᎨᏒᎾ ᏗᏙᎳᎩ ᏧᏣᏔᏊ ᏄᎾᏛᏅ ᎯᎠ [[Turkey|ᏨᏓᏓᏨᏍᏙᏗ]], ᎠᎴ ᏥᏄᏍᏛᎩ ᏧᏣᏔᏊ ᏄᎾᏛᏅ [[Ottoman Empire|ᎠᎵᏍᏕᎸᏗ]] [[sultan|ᏄᎬᏫᏳᏌᏕᎩ]].
 
@@ -19,7 +19,7 @@
 atogiyadv ᎭᏫᎾᏗᏢ Arabic ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᎢᏳᏓᎵᎭ ᎤᎿᏩᎥᎩ ᎠᎳᏍᏚᎶ ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ, ᎤᏍᏆᎸᎲ ᏗᏟᎶᏍᏔᏅ. ᎯᎠ ᎧᏃᎮᎸᎯ ᏗᎧᏃᏗ ᎨᏒᎢ ᎬᎿᎨ.
 
 == ᎤᏚᎯᏍᏛ ᏗᎦᏘᎴᎩ ᎠᎳᏍᏚᎶ ==
-ᎯᎠ ᏙᏄᏭᎢ ᎠᎳᏍᏚᎶ ᎤᎭ ᎢᎦᏛ <ref>"ᎠᎳᏍᏚᎶ ᎪᏢᏗ Sikhs ᎾᏍᎦᏅᎾ ᏗᏲᏍᏗ", ᎾᎥᎢ Larry B. ᎧᏁᎬ ᎤᏲᏴᎬ, ''ᎯᎠ Los Angeles itsuwakodi'', 20 ᏚᎵᏍᏗ 2001, reprinted ᎾᎾᎢ WackyIraqi.com, retrieved 8 ᏕᎭᎷᏱ 2006[http://wackyiraqi.com/hate/turbans.htm]</ref><ref>"California ᎠᎨᏴ ᏗᎫᏮᎶᏔᏅ ᎬᏙᏗ intimidating Sikhs ᎭᏫᎾᏗᏢ Oregon", ᎾᎥᎢ Steven Du Bois, ''Berkeley ᏧᎩᏨᏅᏓ ᎡᎶᎯ'', 18 ᏚᎵᏍᏗ 2001, retrieved 8 ᏕᎭᎷᏱ 2006[http://www.berkeleydailyplanet.com/article.cfm?archiveDate=09-18-01&storyID=6883]</ref>      ᎠᎴ [[hate crime|ᎦᎾᏆᏘᏍᏗ ᎠᏍᎦᏅᏨ]]<ref>"ᏗᎧᏃᏗ ᎤᎾᏰᎯᏍᏗ backlash ᎦᏂᏰᎬ ᏗᎦᏘᎸᏍᏗ", ᎾᎥᎢ Suhasini Haidar, ''CNN'', 19 ᏚᎵᏍᏗ, 2001, retrieved 8 ᏕᎭᎷᏱ 2006[http://archives.cnn.com/2001/US/09/19/gen.hate.crimes/index.html]</ref><ref>"ᎦᎾᏆᏘᏍᏗ ᎠᏍᎦᏅᏨ ᎠᏥᏐᏅᏅ ᏗᏎᎯᏐᏗ ᏗᏓᎦᏘᎸᏍᏗ ᎭᏫᎾᏗᏢ ᎤᏤᎵ ᎠᎵᏍᏓᏴᏗ ᎠᏓᎾᏅ", ᎾᎥᎢ Cadonna M. Peyton, ᎤᎾᎵᎪᏅᎯ ᏗᏂᎴᏱᏗᏍᎩ. ''Berkeley ᏧᎩᏨᏅᏓ ᎡᎶᎯ'', 8 ᎥᏍᎩᏱ 2001, retrieved 8 ᏕᎭᎷᏱ 2006[http://www.berkeleydaily.org/article.cfm?archiveDate=12-08-01&storyID=8820]</ref> ᎭᏫᎾᏗᏢ ᎯᎠ [[United States|ᎠᏫᏒᏗ ᎧᏃᎮᎭ]] ᏥᏄᏍᏗ ᏄᎵᏍᏙᏗ ᎯᎠ [[September 11, 2001 attacks|ᏚᎵᏍᏗ 11, 2001 ᏗᎦᏘᎸᏍᏗ]], ᎣᏂ ᏧᏩᎫᏛ ᎢᎦᏛ ᏴᏫ ᏁᎵᏒ Ꮎ ᏴᏫ Ꮎ ᎤᎿᏩᎥᎩ ᎠᎳᏍᏚᎶ ᎨᏒᎩ Muslim. ᎭᏫᎾᏗᏢ ᏯᏛᎾ ᎤᏙᎯᏳ, Sikhs (ᎦᎪ ᎠᎴ ᎥᏝ ᎢᏳᏍᏗ [[Muslim]] ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ [[Arab|ᏗᎦᏣᏄᎶ ᎤᎾᏣ]]) ᎪᏢᏗ ᎦᎸᎳᏗᏢ ᎯᎠ ᏄᎵᏂᎬᎬ ᎤᏂᎪᏗᏗ ᎠᎳᏍᏚᎶ ᎭᏫᎾᏗᏢ ᎯᎠ [[Western world|ᏭᏕᎵᎬᏗᏢ ᎡᎶᎯ]].
+ᎯᎠ ᏙᏄᏭᎢ ᎠᎳᏍᏚᎶ ᎤᎭ ᎢᎦᏛ <ref>"ᎠᎳᏍᏚᎶ ᎪᏢᏗ Sikhs ᎾᏍᎦᏅᎾ ᏗᏲᏍᏗ", ᎾᎥᎢ Larry B. ᎧᏁᎬ ᎤᏲᏴᎬ, ''ᎯᎠ Los Angeles itsuwakodi'', 20 ᏚᎵᏍᏗ 2001, reprinted ᎾᎾᎢ WackyIraqi.com, retrieved 8 ᏕᎭᎷᏱ 2006[http://wackyiraqi.com/hate/turbans.htm]</ref><ref>"California ᎠᎨᏴ ᏗᎫᏮᎶᏔᏅ ᎬᏙᏗ intimidating Sikhs ᎭᏫᎾᏗᏢ Oregon", ᎾᎥᎢ Steven Du Bois, ''Berkeley ᏧᎩᏨᏅᏓ ᎡᎶᎯ'', 18 ᏚᎵᏍᏗ 2001, retrieved 8 ᏕᎭᎷᏱ 2006[http://www.berkeleydailyplanet.com/article.cfm?archiveDate=09-18-01&storyID=6883]</ref> ᎠᎴ [[hate crime|ᎦᎾᏆᏘᏍᏗ ᎠᏍᎦᏅᏨ]]<ref>"ᏗᎧᏃᏗ ᎤᎾᏰᎯᏍᏗ backlash ᎦᏂᏰᎬ ᏗᎦᏘᎸᏍᏗ", ᎾᎥᎢ Suhasini Haidar, ''CNN'', 19 ᏚᎵᏍᏗ, 2001, retrieved 8 ᏕᎭᎷᏱ 2006[http://archives.cnn.com/2001/US/09/19/gen.hate.crimes/index.html]</ref><ref>"ᎦᎾᏆᏘᏍᏗ ᎠᏍᎦᏅᏨ ᎠᏥᏐᏅᏅ ᏗᏎᎯᏐᏗ ᏗᏓᎦᏘᎸᏍᏗ ᎭᏫᎾᏗᏢ ᎤᏤᎵ ᎠᎵᏍᏓᏴᏗ ᎠᏓᎾᏅ", ᎾᎥᎢ Cadonna M. Peyton, ᎤᎾᎵᎪᏅᎯ ᏗᏂᎴᏱᏗᏍᎩ. ''Berkeley ᏧᎩᏨᏅᏓ ᎡᎶᎯ'', 8 ᎥᏍᎩᏱ 2001, retrieved 8 ᏕᎭᎷᏱ 2006[http://www.berkeleydaily.org/article.cfm?archiveDate=12-08-01&storyID=8820]</ref> ᎭᏫᎾᏗᏢ ᎯᎠ [[United States|ᎠᏫᏒᏗ ᎧᏃᎮᎭ]] ᏥᏄᏍᏗ ᏄᎵᏍᏙᏗ ᎯᎠ [[September 11, 2001 attacks|ᏚᎵᏍᏗ 11, 2001 ᏗᎦᏘᎸᏍᏗ]], ᎣᏂ ᏧᏩᎫᏛ ᎢᎦᏛ ᏴᏫ ᏁᎵᏒ Ꮎ ᏴᏫ Ꮎ ᎤᎿᏩᎥᎩ ᎠᎳᏍᏚᎶ ᎨᏒᎩ Muslim. ᎭᏫᎾᏗᏢ ᏯᏛᎾ ᎤᏙᎯᏳ, Sikhs (ᎦᎪ ᎠᎴ ᎥᏝ ᎢᏳᏍᏗ [[Muslim]] ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ [[Arab|ᏗᎦᏣᏄᎶ ᎤᎾᏣ]]) ᎪᏢᏗ ᎦᎸᎳᏗᏢ ᎯᎠ ᏄᎵᏂᎬᎬ ᎤᏂᎪᏗᏗ ᎠᎳᏍᏚᎶ ᎭᏫᎾᏗᏢ ᎯᎠ [[Western world|ᏭᏕᎵᎬᏗᏢ ᎡᎶᎯ]].
 
 == ᏓᏓᏚᎬ ᎪᏪᎵ ==
 <references/>
@@ -34,11 +34,7 @@ atogiyadv ᎭᏫᎾᏗᏢ Arabic ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᎢᏳᏓᎵᎭ
 * [http://www.ratemyturban.com Rate My Turban] Promoting ᎯᎠ ᎤᏙᎯᏳ ᎾᏍᎩᏯᎢ ᎯᎠ ᎠᎳᏍᏚᎶ
 * [http://www.sikhnet.com/s/WhyTurbans Information on why Sikhs wear Turbans]
 
-[[Category:Headgear]]
-[[Category:Sikh religious clothing]]
-[[Category:Islamic dress]]
-[[Category:Middle Eastern clothing]]
-[[Category:Persian loanwords]]
+[[Category:ᏗᏄᏬ ᏗᎦᏰᏩᏛ]]
 
 [[ar:عمامة]]
 [[az:Çalma]]
