--- a/ᎠᎱᎵ.mw
+++ b/ᎠᎱᎵ.mw
@@ -31,7 +31,6 @@ lyudetiyvda ᎤᎾᏅᏛ ᎠᎱᎵ ᎠᎴ ᏂᏛᎴᏅᏓ 3000 BC.[http://books.
 * [[Tabla]]
 
 == ᎤᏓᏎᎦᏤᏗ ᏗᏕᎬᏔᏛ ==
-{{Spoken Wikipedia|Drum.ogg|2005-04-13}}
 * [http://www.drummeressentials.com Drum lessons eBook] - 45+ ᎤᏆᏓᏛ ᎠᎱᎵ ᎤᎾᏕᎶᏆᏍᏗ eBook ᎭᏫᎾᏗᏢ PDF
 * [http://www.drum-videos.com/drum-videos.html Drum Video Lessons] - ᎪᏪᎵ ᏕᎦᏅ ᏗᎪᎵᏰᏗ ᎢᎦ ᎣᏏ ᎠᎱᎵ instructional videos.
 * [http://www.drumminmen.com/ Drummin' Men] - ᎯᎠ ᎠᏓᎾᏅᏗ ᎦᎾᏕᎩ ᎤᏤᎵ Resource ᎾᏍᎩᎾᎢ ᏗᏕᎬᏔᏛ ᎠᎱᎵ ᏄᏍᏗᏓᏅ.
@@ -40,7 +39,8 @@ lyudetiyvda ᎤᎾᏅᏛ ᎠᎱᎵ ᎠᎴ ᏂᏛᎴᏅᏓ 3000 BC.[http://books.
 * [http://www.drummerworld.com/ Drummer World]- ᎡᏆ ᎤᏓᏂᏝᏅ online ᎠᎱᎵ clinics ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᏥᏄᏍᏗ ᎠᎱᎵ videos.
 * [http://www.rockdrummingsystem.com Rock Drum Lessons] - ᏗᏓᎴᎲᏍᎬ ᎾᏍᎩᎾᎢ ᎠᏎᏊᎢ ᏅᏯ ᏗᏍᏆᎸᏙᏗ ᏗᎬᎯᏓ ᏗᎧᏃᎩᏛ ᎭᏫᎾᏗᏢ PDF, ᎠᎴ ᎠᏕᎶᏆᏍᏗ ᏚᏓᏡᎬ.
 
-[[Category:Drums|*]]
+[[Category:ᏗᎧᏃᎩᏛ]]
+[[Category:ᏗᏁᎸᏙᏗ]]
 
 [[af:Trom]]
 [[als:Trommel]]
