--- a/ᏓᏫᏍᎦᎳ.mw
+++ b/ᏓᏫᏍᎦᎳ.mw
@@ -21,7 +21,7 @@
 *[[Chert]]
 *[[Eolith]]
 *[[Obsidian]]
-*[[ᏙᎪᏩᎸ  ᎪᎢ]]
+*[[ᏙᎪᏩᎸ ᎪᎢ]]
 *[[Ferrocerium]], ᏧᏠᎯᏍᏗ ᎾᏍᎩ ᎾᏍᏇ ᏩᏎᎸᎯ ᏥᏄᏍᏗ "ᏓᏫᏍᎦᎳ"
 *[[ᎦᎳᏅᎯ ᎦᏂᏌᎲᎢ]], lyudetiyvda ᏓᏫᏍᎦᎳ ᎠᏆᏤᎵ ᎭᏫᎾᏗᏢ [[Norfolk]], [[England]]
 
@@ -30,8 +30,7 @@
 * [http://www.flintsource.net/ Flintsource.net European Artefacts - detailed site]
 * [http://www.wildwoodsurvival.com/survival/fire/flintandsteel/RBclarifications.html Flint and steel clarifications]
 
-[[Category:Sedimentary rocks]]
-[[Category:Lithics]]
+[[Category:ᏭᎫᏅᏛ ᏗᎬᏙᏗ]]
 
 [[ca:Ascla]]
 [[cs:Pazourek]]
