--- a/ᏑᎵ.mw
+++ b/ᏑᎵ.mw
@@ -54,15 +54,11 @@ image:Buteo buteo.jpg
 </gallery>
 
 == ᏫᏓᏎᎸᎢ ==
-* {{IUCN2006|assessors=BirdLife International|year=2004|id=49439|title=Buteo buteo|downloaded=11 May 2006}} ᎠᏓᏁᎳᏅᎯ ᎠᏴᏍᏗ ᎠᏠᏯᏍᏗ ᎦᎴᏴᏗᏍᎬᎢ ᎾᏍᎩᎾᎢ ᎦᏙᏃ ᎪᎯ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎨᏒᎢ ᎠᏂᎦᏲᎵ ᎤᏃᏝᎩ
-
-* [http://www.madeirabirds.com/buzzard Madeira Birds - Buzzard]
 {{Commons|Buteo buteo}}
+* {{IUCN2006|assessors=BirdLife International|year=2004|id=49439|title=Buteo buteo|downloaded=11 May 2006}} ᎠᏓᏁᎳᏅᎯ ᎠᏴᏍᏗ ᎠᏠᏯᏍᏗ ᎦᎴᏴᏗᏍᎬᎢ ᎾᏍᎩᎾᎢ ᎦᏙᏃ ᎪᎯ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎨᏒᎢ ᎠᏂᎦᏲᎵ ᎤᏃᏝᎩ
+* [http://www.madeirabirds.com/buzzard Madeira Birds - Buzzard]
 
-[[Category:Buteoninae]]
-[[Category:Birds of Europe]]
-[[Category:Birds of Asia]]
-[[Category:Fauna of Pakistan]]
+[[Category:ᏥᏍᏆ]]
 
 [[an:Buteo buteo]]
 [[az:Adi sar]]
