/* ᎠᎪᏩᏛᏗ ᎾᏍᎩ ᎾᏍᏇ */ removing extra links, transliterating

--- a/ᏣᎳᎩ.mw
+++ b/ᏣᎳᎩ.mw
@@ -196,7 +196,6 @@ W. W. Keeler ᏥᏄᏍᏛᎩ ᎠᏑᏰᏛ ᎤᎬᏫᏳᎯ ᎭᏫᎾᏗᏢ [[1949
 *[[Don Frye|ᎫᏢᎥᏍᎬ Frye]], [[ᎦᏟᏌᏅ ᏓᏄᏬ ᎢᏳᏍᏗ ᏗᎾᏟᎶᏍᏗᏍᎩ]] ᎣᏍᏓᎯᎨ ᎠᎾᏗᏒᎯᎯ, ᎠᏛᏁᎵᏍᎩ, ᎠᎴ [[ᎢᏳᏍᏗ ᎢᏯᏛᏁᎯ ᎠᎾᏗᏒᎯᎯ]] (ᎦᏟᏌᏅ ᏣᎳᎩ/ᎦᏁᎳ/Pennsylvania Dutch ᎤᏩᎫᏗᏗᏒ)
 
 ==ᎠᎪᏩᏛᏗ ᎾᏍᎩ ᎾᏍᏇ==
-*[http://www.southerncherokeenation.net Southern Cherokee Nation]
 *[[ᏣᎳᎩ ᎤᎾᏙᏢᎯ]]
 *[[ᏣᎳᎩ ᎤᏁᎳᏅᎯ]]
 *[[ᏣᎳᎩ ᎤᎦᏯ]]
@@ -204,10 +203,9 @@ W. W. Keeler ᏥᏄᏍᏛᎩ ᎠᏑᏰᏛ ᎤᎬᏫᏳᎯ ᎭᏫᎾᏗᏢ [[1949
 *[[ᏣᎳᎩ ᎠᏯᏩᏍᏗ ᎧᏃᎯᏴᎯ]]
 *[[Unto ᎾᏍᎩ ᎯᎠ ᏗᎦᏚᏏ]]
 *[[ᎤᏍᏗ ᎦᏅᏅ  ᏗᎦᏌᏬᏍᏗ]]
-*[[ᎠᏂ-kutani]]
 *[[ᏣᎳᎩ ᎬᎿᎨ ᎠᏗᏔᏍᏗ]]
 *[[Stomp Dance|Stomp ᎠᎳᏍᎩᏓ]]
-*[[Gadugi]]
+*[[ᎦᎫᎩ]]
 *[[ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᏓᏄᏩ ᎠᎾᎵᎯ ᎤᎾᏙᏢᎯ]]
 *[[ᎩᏚᏩ ᎤᎾᏙᏢᎯ]]
 {{commons|Category:Cherokee}}
