/* ᎢᎦᏪᏛ ᏣᎳᎩ ᎤᎶᏒᎩ */ beginning to remove entertainers of possible Cherokee descent, transliterating Wes Studi's name

--- a/ᏣᎳᎩ.mw
+++ b/ᏣᎳᎩ.mw
@@ -171,28 +171,16 @@ W. W. Keeler ᏥᏄᏍᏛᎩ ᎠᏑᏰᏛ ᎤᎬᏫᏳᎯ ᎭᏫᎾᏗᏢ [[1949
 *[[Charisma Carpenter|Charisma ᏗᏁᏍᎨᏍᎩ]], ᎠᏛᏁᎵᏍᎩ
 *[[Brad Carson|ᏕᎬᏔᏛ Carson]], ᎠᎴᏅᏔᏅ ᎠᏫᏒᏗ ᎧᏃᎮᎭ ᏗᏂᎳᏫᎩ, ᎠᏍᎪᎵ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᏗᎦᎸᏫᏍᏓᏁᏗ, Tribal ᎨᎳ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ
 *[[Ned Christie]], ᏗᎦᏃᏣᎵ ᎤᏁᎫᏥᏓ ᎠᎴ Frontiersman ᎾᎯᏳᎨᏒ ᎣᎦᎳᎰᎻ ᏗᏓᏙᎳᏤᎸ, Tribal ᎨᎳ, ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ
-*[[Rita Coolidge]], ᏗᏂᏃᎩᏍᏗᏍᎩ
 *[[Jeff Davis Tahchee Cypert]], aka [[Chief Tahachee|ᎤᎬᏫᏳᎯ Tahachee]], ᎠᏛᏁᎵᏍᎩ
 *[[Jerry Ellis]], nominated ᎾᏍᎩᎾᎢ [[Pulitzer Prize|Pulitzer ᎠᏌᏍᏛ]] ᎾᏍᎩᎾᎢ ᎤᏤᎵ 1991 ᎪᏪᎵ ''ᎠᎢᏒᎢ ᎯᎠ ᎤᏍᏗ ᎦᏅᏅ, ᏌᏊ ᎠᏍᎦᏯ ᎤᏤᎵ ᎥᎢᏒᎢ ᎨᎳᏛᏍᏗ ᎯᎠ ᏣᎳᎩ ᎤᏍᏗ ᎦᏅᏅ ᏗᎦᏌᏬᏍᏗ''
 *ᎠᎾᏗᏒᎯᎯ [[Ernest E. Evans]], Ꭴ.. ᎠᎺᏉᎯ ᎠᏂᏯᏫᏍᎩ WWII ᎠᏥᎸᏉᏗ; awarded ᎠᎧᏁᏍᏙᏗ ᎠᏥᎸᏉᏗ
 *[[John Nance Garner|ᎦᎳᏅᎯ Nance ᎠᏓᎾᏅ]], ᏗᎦᎳᏫᎩ ᏂᏛᎴᏅᏓ ᏅᏓᎩ ᎠᎴ ᎯᎠ ᏦᏍᎪᎯ-ᏔᎵᏁ ᏔᎵᏁ ᎠᏓᎴᏁ ᎤᎬᏫᏳᎯ ᎯᎠ ᎠᏫᏒᏗ ᎧᏃᎮᎭ
-*[[Diane Glancy]], ᏗᎪᏪᎵᏍᎩ ᏗᎧᏃᎮᎸᏍᎩ, ᏄᏍᏛ ᏗᎧᏃᏗ ᎠᎴ ᎪᏪᎵ
-*[[Hawk Littlejohn|ᏔᏬᏗ Littlejohn]], [[Native American flute|ᎾᏰᎯᏯ ᏴᏩᏁᎬ ᎠᏤᎷᎯᏍᏗ]] ᎪᏪᎵ Ꭺgoweli gowlisgi ᎠᎴ ᏗᏂᏃᎩᏍᏗᏍᎩ
 *[[Arnold Kimsey King|Arnold Kimsey ᎤᎬᏫᏳᎯ]], [[University of North Carolina|ᏗᏕᎶᏆᏍᏗ  ᎤᏴᏢ Carolina]] administrator ᎠᎴ ᎪᏪᎵᏍᎩ
 *[[Thomas King|Thomas ᎤᎬᏫᏳᎯ]], ᎪᏪᎵᏍᎩ
-*[[Sonny Landham]], Hollywood ᎠᎴ ᎦᏓᎭ ᎠᏛᏁᎵᏍᎩ
-*[[Jeffrey Vernon Merkey]], ᏴᏩᏁᎬ ᎡᎵᏍ ᎧᏃᎮᎸᏗ, ᎠᎴᏅᏔᏅ ᎤᎬᏫᏳᎯ ᎧᏃᎮᎸᏗ Novell, ᎪᏪᎵ Ꭺgoweli gowlisgi Multiprocessor NetWare ᎠᏂᎩᏍᏗᏍᎬ iyahdvnelidasdi, Tribal ᎨᎳ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ
-*[[Charlie Musselwhite]], ᎧᏂᎬᎾᎥ ᏗᏂᏤᎷᎯᏍᎩ ᏗᏂᏃᎩᏍᏗᏍᎩ ᎠᎴ bandleader
-*[[Jimi Hendrix]], ᏗᏂᏃᎩᏍᏗᏍᎩ, guitarist
-*[[Chuck Norris|ᎦᏌᏙᏯᏍᏗ Norris]], ᎠᏛᏁᎵᏍᎩ ᎠᎴ [[Martial art|ᏓᏄᏬ ᎢᏳᏍᏗ ᏗᏟᎶᏍᏔᏅᏍᎩ]]
-*[[John Phillips (musician)|ᎦᎳᏅᎯ Phillips]], ᏗᏓᏘᏁᎯ ᎯᎠ ᎡᏥ & ᎯᎠ ᎡᏙᏓ
-*[[Jay Red Eagle|ᏜᏴᎦ ᎩᎦᎨ ᏬᎭᎵ]], ᎾᏰᎯᏯ ᏴᏩᏁᎬ flutist, Tribal ᎨᎳ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ
 *[[John Red Hat Duke (Keetoowah Leader)|ᎦᎳᏅᎯ ᎩᎦᎨ alisquetuwo ᏄᎬᏫᏳᏌᏕᎩ (ᎩᏚᏩ ᏗᏓᏘᏁᎯ)]] - ᏗᏓᏘᏁᎯ ᎩᏚᏩ ᎤᎾᏙᏢᎯ ᏧᏁᎸᏗᏯ ᎠᏓᏅᏏᏙᎠ, tribal ᎨᎳ, ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ
-*[[Burt Reynolds]], ᎠᏛᏁᎵᏍᎩ. ᎤᏤᎵ ᎠᏓᏙᏓ, ᏗᏓᏂᏱᏍᎩ ᎤᎬᏫᏳᎯ, ᏥᏄᏍᏛᎩ ᎠᏰᎵ ᎢᏴ-ᏣᎳᎩ.
-*[[Will Rogers|ᏫᎵ Rogers]], ᏥᏍᎪᏯ ᎠᎴ entertainer [http://www.archives.gov/education/lessons/fed-indian-policy/]
+*[[Will Rogers]], ᏥᏍᎪᏯ ᎠᎴ entertainer [http://www.archives.gov/education/lessons/fed-indian-policy/]
 *[[ᎩᏚᏩ ᎤᎾᏙᏢᎯ]], ᏣᎳᎩ ᏗᏓᏘᏁᎯ ᎠᎴ ᎠᏓᏎᎮᎮᎯ, Tribal ᎨᎳ, UKB
-*[[Wes Studi]], ᎠᏛᏁᎵᏍᎩ (ᎧᎵ ᏣᎳᎩ) Tribal ᎨᎳ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ
-*[[Johnny Depp]], ᎠᏛᏁᎵᏍᎩ (ᎦᏟᏌᏅ ᏣᎳᎩ/ᎦᏁᎳ/ᎠᏓᏥ ᎤᏩᎫᏗᏗᏒ)
+*[[ᏪᏌ ᏍᎫᏗ]], ᎠᏛᏁᎵᏍᎩ (ᎧᎵ ᏣᎳᎩ) Tribal ᎨᎳ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ
 *[[Don Frye|ᎫᏢᎥᏍᎬ Frye]], [[ᎦᏟᏌᏅ ᏓᏄᏬ ᎢᏳᏍᏗ ᏗᎾᏟᎶᏍᏗᏍᎩ]] ᎣᏍᏓᎯᎨ ᎠᎾᏗᏒᎯᎯ, ᎠᏛᏁᎵᏍᎩ, ᎠᎴ [[ᎢᏳᏍᏗ ᎢᏯᏛᏁᎯ ᎠᎾᏗᏒᎯᎯ]] (ᎦᏟᏌᏅ ᏣᎳᎩ/ᎦᏁᎳ/Pennsylvania Dutch ᎤᏩᎫᏗᏗᏒ)
 
 ==ᎠᎪᏩᏛᏗ ᎾᏍᎩ ᎾᏍᏇ==
