/* ᎢᎦᏪᏛ ᏣᎳᎩ ᎤᎶᏒᎩ */ +ᏍᏏᏉᏯ

--- a/ᏣᎳᎩ.mw
+++ b/ᏣᎳᎩ.mw
@@ -165,7 +165,6 @@ W. W. Keeler ᏥᏄᏍᏛᎩ ᎠᏑᏰᏛ ᎤᎬᏫᏳᎯ ᎭᏫᎾᏗᏢ [[1949
 ᏗᎦᏃᏣᎵ ᏣᎳᎩ ᎠᏓᏎᎮᎮᎯ ᎠᏠᏯᏍᏛ [[Chad "ᎤᏥᏣᏔ" ᎠᏥᏅᏏᏓᏍᏗ]], [[Wilma Mankiller]] ᎠᎴ [[Ross Swimmer]]. ᎯᎠ ᏴᏩᏁᎬ ᎧᏂᎬᎾᎥ-ᏅᏯ guitarist [[Jimi Hendrix]] ᏥᏄᏍᏛᎩ ᏣᎳᎩ ᎠᎦᏲᎳᏗᏍᏗ ᎾᎿ ᎢᏗᏢ ᎤᏤᎵ ᏧᎦᏴᎵᎨ ᎤᎵᏏ, Nora ᎠᏥᎸᏍᎩ Moore. [[Oral Roberts|ᎧᏁᏨᎯ Roberts]], ᎬᏙᏗ-ᏂᏓᏙᎳᎬᎾ ᎦᎾᏄᎪᏫᏒ ᎭᏫᎾᏗᏢ ᎯᎠ 1950s ᏗᎬᏩᎶᏒ ᎯᎠ 1990s, ᎨᏒᎢ ᎠᏆᏂᏲᏍᏗ ᎠᏫᏗᏍᎬ ᎨᎳ ᎯᎠ Choctaw ᎠᏰᎵ ᎤᏙᏢᏒ ᎣᎦᎳᎰᎻ, ᎠᎴ ᎤᎪᏗᏗ ᎯᏁᎩ ᎾᏍᎩ ᎠᏍᎦᏯ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᏣᎳᎩ. 
 
 ===ᎢᎦᏪᏛ ᏣᎳᎩ ᎤᎶᏒᎩ===
-{{sources}}
 *[[Joe Byrd]], ᎠᎴᏅᏔᏅ ᎤᎬᏫᏳᎯ, ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ. ᎠᏁᎳᏛᏅ ᏗᎧᎷᏆᏗᏅᏍᏗ ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎠᏰᎵ ᎤᏙᏢᏒ ᎭᏫᎾᏗᏢ ᎯᎠ ᎢᎬᏱ 1990s ᎦᏙ ᎤᏍᏗ ᏄᎵᏍᏔᏅᎩ ᎭᏫᎾᏗᏢ deployment ᏂᎬᎾᏛ ᎠᏰᎵ ᎠᏂᏯᏫᏍᎩ ᎾᎥᎢ ᎯᎠ ᎠᏫᏒᏗ ᎧᏃᎮᎭ ᏅᎠᏓᏁᏗ ᎠᏓᏅᏍᏗ ᎾᎿ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ Tribal ᏗᎦᏙᎯ. ᏥᏄᏍᏛᎩ ᎾᏍᎩ ᎾᏍᏇ ᎠᎫᎢᏍᏗ ᎠᏓᎩᎡᏗ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᎠᏰᎵ ᏕᎠᎲ ᎾᎥᎢ ᎯᎠ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ ᏄᎬᏫᏳᏌᏕᎩ ᎤᏩᏂᎦᎸ.
 *[[Bryan Callen]], ᎠᏛᏁᎵᏍᎩ
 *[[Charisma Carpenter|Charisma ᏗᏁᏍᎨᏍᎩ]], ᎠᏛᏁᎵᏍᎩ
@@ -180,6 +179,7 @@ W. W. Keeler ᏥᏄᏍᏛᎩ ᎠᏑᏰᏛ ᎤᎬᏫᏳᎯ ᎭᏫᎾᏗᏢ [[1949
 *[[John Red Hat Duke (Keetoowah Leader)|ᎦᎳᏅᎯ ᎩᎦᎨ alisquetuwo ᏄᎬᏫᏳᏌᏕᎩ (ᎩᏚᏩ ᏗᏓᏘᏁᎯ)]] - ᏗᏓᏘᏁᎯ ᎩᏚᏩ ᎤᎾᏙᏢᎯ ᏧᏁᎸᏗᏯ ᎠᏓᏅᏏᏙᎠ, tribal ᎨᎳ, ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ
 *[[Will Rogers]], ᏥᏍᎪᏯ ᎠᎴ entertainer [http://www.archives.gov/education/lessons/fed-indian-policy/]
 *[[ᎩᏚᏩ ᎤᎾᏙᏢᎯ]], ᏣᎳᎩ ᏗᏓᏘᏁᎯ ᎠᎴ ᎠᏓᏎᎮᎮᎯ, Tribal ᎨᎳ, UKB
+*[[ᏍᏏᏉᏯ]] (ca. 1767–1843)
 *[[ᏪᏌ ᏍᎫᏗ]], ᎠᏛᏁᎵᏍᎩ (ᎧᎵ ᏣᎳᎩ) Tribal ᎨᎳ ᏣᎳᎩ ᎠᏰᎵ ᎤᏙᏢᏒ
 *[[Don Frye|ᎫᏢᎥᏍᎬ Frye]], [[ᎦᏟᏌᏅ ᏓᏄᏬ ᎢᏳᏍᏗ ᏗᎾᏟᎶᏍᏗᏍᎩ]] ᎣᏍᏓᎯᎨ ᎠᎾᏗᏒᎯᎯ, ᎠᏛᏁᎵᏍᎩ, ᎠᎴ [[ᎢᏳᏍᏗ ᎢᏯᏛᏁᎯ ᎠᎾᏗᏒᎯᎯ]] (ᎦᏟᏌᏅ ᏣᎳᎩ/ᎦᏁᎳ/Pennsylvania Dutch ᎤᏩᎫᏗᏗᏒ)
 
