--- a/ᏚᏯ.mw
+++ b/ᏚᏯ.mw
@@ -73,7 +73,6 @@
 * ᎭᏫᎾᏗᏢ Software ᎪᎱᏍᏗ ᎬᏔᏂᏓᏍᏗ, [[Java ᏚᏯ]] ᎠᎴ reusable software ᏑᏓᎴᎩ.
 
 == [[Flatulence|ᎠᏥᎸ ᎠᏓᏪᎳᎩᏍᎩ]] ==
-
 ᎤᎪᏗᏗ ᎠᎵᏍᏓᏴᏗ ᏚᏯ, ᎠᏠᏯᏍᏗᏍᎩ ᎠᏯᏖᎾ ᏚᏯ ᎠᎴ soybeans, ᎢᎦᎢ ᎨᏒ [[oligosaccharides]], ᏗᎦᎪᏗ ᎧᎵᏎᏥ ᎠᏍᏓᏩᏛᏍᏗ ᎾᏍᎩ ᎾᏍᏇ ᎠᏩᏛᏗ ᎭᏫᎾᏗᏢ [[tsuqwanvdena]]. anti-oligosaccharide [[enzyme]] ᎨᏒᎢ ᎾᏍᎩ ᎢᏳᎵᏍᏙᏗ ᏗᏙᎳᏤᎩ ᎠᏓᏁᎳᏅᎯ ᎾᏍᎩ ᎯᎠ ᎧᎵᏎᏥ ᎠᏍᏓᏩᏛᏍᏗ. ᏥᏄᏍᏗ ᏄᎶᏒᏍᏛᎾ ᏴᏫ digestive ᎧᏃᎮᎸᏍᎩ ᎾᏛᏁ ᎾᏍᎩ ᏂᎨᏒᎾ ᎢᎦᎢ ᎨᏒ ᏂᎦᎵᏍᏗᏍᎬᎫ anti-oligosaccharide enzymes, consumed oligosaccharides ᎠᎴ ᎢᏯᏛᏁᎵᏓᏍᏗ ᎠᏛᏅᎢᏍᏔᏅ ᎾᎥᎢ ᎢᎦᎢ ᎭᏫᎾᏗᏢ ᎯᎠ ᎡᏆ ᏧᎵᎦᏏ. ᎪᎯ ᎠᏓᏁᎳᏅᎯ ᏧᎵᎬᏩᎳᏅᎯ ᎠᏛᎯᏍᏗ ᎠᏥᎸ ᎠᏓᏪᎳᎩᏍᎩ-causing gasses ᏥᏄᏍᏗ byproduct.
 
 ᎢᎦᏛ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ [[mold|ᎦᎳᏅᎯ]] ᎠᏛᎯᏍᏙᏗ ᎠᏓᎴᏂᏍᎬ-galactosidase, anti-oligosaccharide enzyme, ᎦᏙ ᎤᏍᏗ ᎠᏂᏴᏫ ᏰᎵᏇ ᎠᎩᏍᏗ ᎠᏛᏅᎢᏍᏔᏅ ᎠᏓᏁᎳᏅᎯ oligosaccharides ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏍᏗ ᏧᎵᎦᏏ. ᎪᎯ enzyme, ᎾᏊ ᎦᎾᏗᏅᏓ ᎭᏫᎾᏗᏢ ᎯᎠ [[United states|Ꭴ..]] ᎭᏫᎾᏗᏢ ᎯᎠ ᎦᎴᏴᏛ-ᏚᏙᎥ [[Beano (dietary supplement)|Beano]], ᏰᎵᏇ ᎾᏍᏋ ᎦᏟᏌᏅᎯ ᎠᎵᏍᏓᏴᏗ ᎠᎴ consumed ᏧᏓᎴᎿᎢᎭ.
@@ -88,8 +87,8 @@
 
 == ᎠᎪᏩᏛᏗ ᎾᏍᎩ ᎾᏍᏇ ==
 
-[[Category:ᏚᏇ]]
-[[Category:Lists of foods]]
+[[Category:Plantae]]
+[[Category:ᎠᎵᏍᏓᏴᏗ ᎠᎴ ᎠᏗᏔᏍᏗ]]
 
 [[ar:فاصولياء]]
 [[bat-smg:Popalė]]
