--- a/ᎧᏁᏨᎢ.mw
+++ b/ᎧᏁᏨᎢ.mw
@@ -1,4 +1,3 @@
-{{Voting}}
 '''ᎧᏁᏨᎢ''' ᎨᏒᎢ ᏄᏍᏛ ᏗᎧᏃᏗ (ᎠᎴᏅᏔᏅ ᎤᏍᏗ ᎠᎳᏍᎦᎶᏗ - ᎠᎪᏩᏛᏗ [[blackball|ᎧᏃᎯᏯᏍᏗ]]) ᎬᏔᏅᎯ ᎪᏪᎸ ᎠᏑᏰᏛ ᎪᏢᏅᎯ ᎾᎥᎢ [[vote|ᎠᏓᏑᏰᏍᎬ]]rs.  ᎠᏂᏏᏴᏫᎭ voter ᎬᏔᏂᏓᏍᏗ ᏌᏊ ᎧᏁᏨᎢ, ᎠᎴ ᎧᏁᏨᎢ ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ shared. ᎭᏫᎾᏗᏢ ᎯᎠ simplest ᏗᏙᎩᏯᏛ, ᎧᏁᏨᎢ ᎠᎾᏍᎬᏘ ᎾᏍᏋ ᏄᏦᏍᏛᎾ ᎠᎬᎭᎸᏓ Ꭺ ᎾᎿ ᎦᏙ ᎤᏍᏗ ᎠᏂᏏᏴᏫᎭ voter ᎪᏪᎵᎠ ᎭᏫᎾᏗᏢ ᎯᎠ ᏚᏙᎥ atogiyasgi, ᎠᎴ [[government|ᎠᏰᎵ ᎤᏙᏢᏒ]]ᎦᎾᏄᎪᏫᏒ ᏗᏙᎩᏯᏛ ᎬᏙᏗ ᎢᏳᏍᏗᏊ ᎬᏂᎨᏒ ᏄᏍᏛᎢ-ᎦᎴᏯᏔᏅᎯ ᎠᎴ electronic ᎧᏁᏨᎢ, ᎭᏫᎾᏗᏢ ᎠᏯᏖᎾ ᏧᏓᎴᏅᏓ ᎦᏟᏌᏅ ᎠᏤᎸ ᎢᎬᏁᏗ. ᎯᎠ voter ᏩᏗᏅᏗ ᎤᎾᏤᎵ ᎧᏁᏨᎢ ᎭᏫᎾᏗᏢ [[Ballot Box|ᎧᏁᏌᎢ]] ᎾᎾᎢ [[Polling Station|ᎠᏎᎸ ᎤᎴᏫᏍᏗ]].
 
 [[Image:Bundestagswahl 05 stimmzett.jpg|thumb|left|150|ᎪᎯ ᎠᏓᏥ ᎧᏁᏨᎢ ᎤᎭ ᎯᎠ constituency ᎠᏓᏑᏰᏍᎬ ᎾᎿ ᎯᎠ ᎠᎦᏍᎦᏂ ᎠᎴ ᎯᎠ ᎤᎾᏓᏟᏌᎲ ᎠᏓᏑᏰᏍᎬ ᎾᎿ ᎯᎠ ᏚᏳᎪᏛ.]]
@@ -28,7 +27,7 @@
 *[[E-democracy|E-ᎤᏂᏣᏘ ᎤᎾᏓᏅᏖᏗ]]
 *[[Vote counting systems|ᎠᏓᏑᏰᏍᎬ ᏛᏎᎯᎯ iyahdvnelidasdi]]
 
-[[Category:Elections]]
+[[Category:ᎠᏰᎵ ᎤᏙᏢᏒ]]
 
 [[da:Stemmeseddel]]
 [[de:Stimmzettel]]
