--- a/ᏒᏃᏱ.mw
+++ b/ᏒᏃᏱ.mw
@@ -1,18 +1,19 @@
 [[File:Melbourne at night02.jpg|thumb|250px|[[Melbourne]] [[skyline]] ᎾᎾᎢ ᏒᏃᏱ]] 
 
-'''ᏒᏃᏱ''' ᎠᎴ '''ᏒᏃᏱ-iyuwakodi''' ᎨᏒᎢ ᎯᎠ ᎠᎴᏫᏍᏙᏗ ᎭᏫᎾᏗᏢ ᎦᏙ ᎤᏍᏗ ᎯᎠ [[ᏅᏙ ᎢᎦ ᎡᎯ]] ᎨᏒᎢ ᎡᎳᏗᏢ ᎯᎠ [[ᎤᏚᎳᏗ]]. ᎯᎠ ᎠᎿᏗᏢ ᏒᏃᏱ ᎨᏒᎢ [[ᎢᎦ]] (ᎠᎴ "ᎢᎦ" ᎠᎪᏩᏛᏗ ᎾᏍᎩ ᏂᏛᎴᏅᏓ "ᎢᎦ" ᏥᏄᏍᏗ ᎬᏔᏅᎯ ᎾᏍᎩᎾᎢ 24-ᏑᏟᎶᏛ ᎠᎴᏫᏍᏙᏗ).
+'''ᏒᏃᏱ''' ᎠᎴ '''ᏒᏃᏱ-ᎢᏳᏩᎪᏗ''' ᎨᏒᎢ ᎯᎠ ᎠᎴᏫᏍᏙᏗ ᎭᏫᎾᏗᏢ ᎦᏙ ᎤᏍᏗ ᎯᎠ [[ᏅᏙ ᎢᎦ ᎡᎯ]] ᎨᏒᎢ ᎡᎳᏗᏢ ᎯᎠ [[ᎤᏚᎳᏗ]]. ᎯᎠ ᎠᎿᏗᏢ ᏒᏃᏱ ᎨᏒᎢ [[ᎢᎦ]] (ᎠᎴ "ᎢᎦ" ᎠᎪᏩᏛᏗ ᎾᏍᎩ ᏂᏛᎴᏅᏓ "ᎢᎦ" ᏥᏄᏍᏗ ᎬᏔᏅᎯ ᎾᏍᎩᎾᎢ 24-ᏑᏟᎶᏛ ᎠᎴᏫᏍᏙᏗ).
 
 == iyuwakodi ᎠᎴ ᎠᏓᏕᏲᎲᏍᎩ ᎡᎶᎯ ==
 ᏚᎵᏏᏂᏒ ᎠᎴ ᏍᏆᎵᎯᎨᏍᏗ ᎬᎾᏬᏍᎬ ᎯᎸᏍᎩ ᎢᎦ ᎾᎿ ᎢᎦᏘᎭ ᎢᎬᏁᎸ ᎤᏍᏆᎸᎲ ᏔᎵ ᎦᏃᏢᎩ ᏄᎬᏫᏳᏒ. ᏌᏊ, ᎯᎠ ᏅᏙ ᎢᎦ ᎡᎯ ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᎪᏍᏓᏱ, ᎠᎴ ᎤᎭ ᎬᎪᏩᏛᏗ ᏂᎬᎢ ᎬᏩᏚᏫᏛ 32 [[ᎯᎸᏍᎩ ᎢᏯᏔᏬᏍᏔᏅ ᎠᏗᏌᏓᏗᏍᏗ]]. ᏔᎵ, ᎯᎠ [[ᎦᏃᎴᏍᎬ]] refracts [[sunlight]] ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ Ꮎ ᎢᎦᏛ ᎾᏍᎩ ᎠᏙᏯᏅᎯᏗᎠ ᎯᎠ ᎦᏙᎯ ᎯᎳᎪ ᎢᏳ ᎯᎠ ᏅᏙ ᎢᎦ ᎡᎯ ᎨᏒᎢ ᎡᎳᏗᏢ ᎯᎠ [[ᎤᏚᎳᏗ]] ᎾᎥᎢ ᎬᏩᏚᏫᏛ 34 ᎯᎸᏍᎩ ᎢᏯᏔᏬᏍᏔᏅ ᎠᏗᏌᏓᏗᏍᏗ. ᎯᎠ ᎤᎾᏓᏟᏌᏅ ᎾᏍᎩ ᎯᎠ ᏔᎵ ᎦᏃᏢᎩ ᏄᎬᏫᏳᏒ ᎤᏅᏔᏂᏓᏍᏗ Ꮎ ᎠᏨᏍᏛ ᎠᏙᏯᏅᎯᏗᎠ ᎯᎠ ᎦᏙᎯ ᎯᎳᎪ ᎢᏳ ᎯᎠ centre ᎯᎠ ᏅᏙ ᎢᎦ ᎡᎯ ᎨᏒᎢ ᎡᎳᏗᏢ ᎯᎠ ᎤᏚᎳᏗ ᎾᎥᎢ ᎬᏩᏚᏫᏛ 50 ᎯᎸᏍᎩ ᎢᏯᏔᏬᏍᏔᏅ ᎠᏗᏌᏓᏗᏍᏗ. 
-ᏄᏠᏯᏍᏛᎾ ᎾᏍᎩ ᎯᎠ ᏄᎵᏍᏔᏅ, ᎢᎦ ᎠᎴ ᏒᏃᏱ ᏯᏓᎢᏗᏏ ᎾᏍᏋ ᎯᎠ ᎤᏠᏱ ᏂᎦᏅᎯᏒ ᎾᎾᎢ ᎯᎠ [[Autumnal equinox|autumnal]] (ᎤᎳᎪᎲᏍᏗ/ᎤᎶᏒᎩ) ᎠᎴ [[ᎠᏛᏍᎩ]] (ᎠᎹ ᎦᏄᎪᎬ) [[equinox]]es, ᎯᎠ ᎢᏳᏊ ᎯᎳᎪ ᎢᏳ ᎯᎠ ᏅᏙ ᎢᎦ ᎡᎯ ᏓᏂᎶᏍᎬᎢ ᎦᏬᎯᎸᏙᏗ ᎯᎠ [[ᎡᎶᎯ ᎠᏰᎵ ᎠᏍᏓᏅᏅ]]. ᎭᏫᎾᏗᏢ ᎤᏙᎯᏳ ᏄᏍᏛ, yvwatuwidv ᎯᎠ equinoxes ᎯᎠ ᎢᎦ ᎨᏒᎢ ᎾᎥᏂᎨᏍᏗ 14 ᎯᎸᏍᎩ ᎢᏯᏔᏬᏍᏔᏅ ᎦᏅᎯᏓᎨ ᎬᎾᏬᏍᎬ ᎯᎠ ᏒᏃᏱ ᎾᎾᎢ ᎯᎠ ᎡᎶᎯ ᎠᏰᎵ ᎠᏍᏓᏅᏅ, ᎠᎴ ᎢᏧᎳᎭ ᎤᏟ ᎢᎦᎢ ᎾᎥᏂᎨᏍᏙᏗ ᎯᎠ [[ᎦᏅᎯᏓ ᎠᏓ]]. ᎯᎠ [[ᎪᎨᏱ]] ᎠᎴ [[ᎪᎳ]] [[solstice]]s ᎤᏙᏪᎸ ᎯᎠ shortest ᏒᏃᏱ ᎠᎴ ᎯᎠ ᎦᏅᎯᎢᏍᏗ ᏒᏃᏱ, ᎨᏥᎸᏉᏗᏳ. [[File:Nott painting.jpg|thumb|right|250px|[[Nótt]], ᎯᎠ Norse ᎬᎨᏳᎢ ᎯᎠ ᏒᏃᏱ, ᎠᎩᎸᎥᏍᎦ ᎾᏍᎩ ᎠᎨᏴ ᏐᏈᎵ ᎭᏫᎾᏗᏢ ᎪᎯ [[19th century|19th sqohitsuqui tsudetiyvdi]] ᎠᏂᎶᏁᏍᎬ ᎾᎥᎢ [[Peter Nicolai Arbo]].]]
 
-ᎯᎠ ᎾᎥᏂᎨᏍᏙᏗ ᎦᎷᎯᏍᏗ ᎨᏒᎢ ᎯᎠ [[ᎤᏴᏢ]] ᎠᎴ [[ᎤᎦᎾᏭ ᎦᏅᎯᏓ ᎠᏓ]], ᎯᎠ ᎡᏆᎯᎨᏍᏙᏗ ᎯᎠ ᎠᏍᏓᏅᏅ ᏧᏓᎴᎿᎢ ᎭᏫᎾᏗᏢ ᎯᎠ ᏒᏃᏱ ᎤᏤᎵ ᏂᎦᏅᎯᏒ. ᎾᏍᎩ ᎤᏁᎳᎩ equinoxes ᏄᎵᏍᏔᏅ ᎬᏙᏗ ᎢᎦ ᎠᎴ ᏒᏃᏱ ᎠᏍᏚᏗ ᎢᏗᎦᏗ ᏂᎦᏅᎯᏒ, ᎤᏓᎷᎸ ᎠᎴ ᎤᎶᏐᏅ equinox ᎯᎠ ᎠᎾᎵᏐᏈᎸᏍᎬ ᏒᏃᏱ ᎢᎦ ᏗᎦᏁᏟᏴᏍᏗ ᎤᏟ ᎢᎦᎢ ᎤᎵᏍᏓᎯᎨ ᎭᏫᎾᏗᏢ ᎦᎷᎯᏍᏗ ᎾᎥᏂᎨ ᎯᎠ ᎦᏅᎯᏓ ᎠᏓ ᎬᎾᏬᏍᎬ ᎭᏫᎾᏗᏢ ᎦᎷᎯᏍᏗ ᎠᏰᎵ ᎯᎠ [[Tropic of Cancer|Tropic ᎠᏓᏰᏍᎩ]] ᎠᎴ ᎯᎠ [[Tropic of Capricorn|Tropic Capricorn]]. ᎭᏫᎾᏗᏢ ᎯᎠ [[ᎤᏴᏢ ᎢᏗᏢ ᎤᏔᏂᏗ ᎦᏙᎯ]], [[Denmark]] ᎤᎭ ᏍᏆᎵᎯᎨᏍᏗ ᏚᎵᏏᏂᏒ ᎭᏫᎾᏗᏢ ᏕᎭᎷᏱ ᎬᎾᏬᏍᎬ [[ᎠᎹ ᎦᏄᎪᎬ]] ᎤᎭ. ᎭᏫᎾᏗᏢ ᎯᎠ [[ᎤᎦᎾᏭ ᎢᏗᏢ ᎤᏔᏂᏗ ᎦᏙᎯ]], [[Antarctica]] ᎤᎭ ᎦᏅᎯᏓᎨ ᏚᎵᏏᏂᏒ ᎭᏫᎾᏗᏢ ᏕᎭᎷᏱ ᎬᎾᏬᏍᎬ [[Chile]] ᎤᎭ. ᎯᎠ ᎤᏴᏢ ᎢᏗᏢ ᎠᎴ ᎤᎦᎾᏭ ᎢᏗᏢ ᎤᏔᏂᏗ ᎦᏙᎯ ᎯᎠ ᎡᎶᎯ ugatohvsv ᎯᎠ ᎤᏠᏱ ᏧᎾᏟᎶᏍᏙᏗ ᏒᏃᏱ ᏂᎦᏅᎯᏒ ᎾᎾᎢ ᎯᎠ ᎤᏠᏱ [[ᎤᏜᏅᏛ]], ᎠᎴ ᎯᎠ ᎠᏓᏠᎯᏍᏗ ᎠᎴ 6 ᎢᏯᏅᏓ ᏧᎦᎴᏅᏓ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ Ꮎ ᏌᏊ ᎤᏔᏂᏗ ᎦᏙᎯ unigatohvsv ᎦᏅᎯᏓ ᏚᎵᏏᏂᏒ (ᎪᎳ) ᎾᎯᏳᎢ ᎯᎠ ᏐᎢ ᎨᏒᎢ experiencing ᏍᏆᎳᎢ ᏚᎵᏏᏂᏒ (ᎪᎨᏱ).
+ᏄᏠᏯᏍᏛᎾ ᎾᏍᎩ ᎯᎠ ᏄᎵᏍᏔᏅ, ᎢᎦ ᎠᎴ ᏒᏃᏱ ᏯᏓᎢᏗᏏ ᎾᏍᏋ ᎯᎠ ᎤᏠᏱ ᏂᎦᏅᎯᏒ ᎾᎾᎢ ᎯᎠ [[Autumnal equinox|autumnal]] (ᎤᎳᎪᎲᏍᏗ/ᎤᎶᏒᎩ) ᎠᎴ [[ᎠᏛᏍᎩ]] (ᎠᎹ ᎦᏄᎪᎬ) [[equinox]]es, ᎯᎠ ᎢᏳᏊ ᎯᎳᎪ ᎢᏳ ᎯᎠ ᏅᏙ ᎢᎦ ᎡᎯ ᏓᏂᎶᏍᎬᎢ ᎦᏬᎯᎸᏙᏗ ᎯᎠ [[ᎡᎶᎯ ᎠᏰᎵ ᎠᏍᏓᏅᏅ]]. ᎭᏫᎾᏗᏢ ᎤᏙᎯᏳ ᏄᏍᏛ, ᏴᏩᎫᏫᏛ ᎯᎠ equinoxes ᎯᎠ ᎢᎦ ᎨᏒᎢ ᎾᎥᏂᎨᏍᏗ 14 ᎯᎸᏍᎩ ᎢᏯᏔᏬᏍᏔᏅ ᎦᏅᎯᏓᎨ ᎬᎾᏬᏍᎬ ᎯᎠ ᏒᏃᏱ ᎾᎾᎢ ᎯᎠ ᎡᎶᎯ ᎠᏰᎵ ᎠᏍᏓᏅᏅ, ᎠᎴ ᎢᏧᎳᎭ ᎤᏟ ᎢᎦᎢ ᎾᎥᏂᎨᏍᏙᏗ ᎯᎠ [[ᎦᏅᎯᏓ ᎠᏓ]]. ᎯᎠ [[ᎪᎨᏱ]] ᎠᎴ [[ᎪᎳ]] [[solstice]]s ᎤᏙᏪᎸ ᎯᎠ shortest ᏒᏃᏱ ᎠᎴ ᎯᎠ ᎦᏅᎯᎢᏍᏗ ᏒᏃᏱ, ᎨᏥᎸᏉᏗᏳ. [[File:Nott painting.jpg|thumb|right|250px|[[Nótt]], ᎯᎠ Norse ᎬᎨᏳᎢ ᎯᎠ ᏒᏃᏱ, ᎠᎩᎸᎥᏍᎦ ᎾᏍᎩ ᎠᎨᏴ ᏐᏈᎵ ᎭᏫᎾᏗᏢ ᎪᎯ [[19th century|19th sqohitsuqui tsudetiyvdi]] ᎠᏂᎶᏁᏍᎬ ᎾᎥᎢ [[Peter Nicolai Arbo]].]]
+
+ᎯᎠ ᎾᎥᏂᎨᏍᏙᏗ ᎦᎷᎯᏍᏗ ᎨᏒᎢ ᎯᎠ [[ᎤᏴᏢ]] ᎠᎴ [[ᎤᎦᎾᏭ ᎦᏅᎯᏓ ᎠᏓ]], ᎯᎠ ᎡᏆᎯᎨᏍᏙᏗ ᎯᎠ ᎠᏍᏓᏅᏅ ᏧᏓᎴᎿᎢ ᎭᏫᎾᏗᏢ ᎯᎠ ᏒᏃᏱ ᎤᏤᎵ ᏂᎦᏅᎯᏒ. ᎾᏍᎩ ᎤᏁᎳᎩ equinoxes ᏄᎵᏍᏔᏅ ᎬᏙᏗ ᎢᎦ ᎠᎴ ᏒᏃᏱ ᎠᏍᏚᏗ ᎢᏗᎦᏗ ᏂᎦᏅᎯᏒ, ᎤᏓᎷᎸ ᎠᎴ ᎤᎶᏐᏅ equinox ᎯᎠ ᎠᎾᎵᏐᏈᎸᏍᎬ ᏒᏃᏱ ᎢᎦ ᏗᎦᏁᏟᏴᏍᏗ ᎤᏟ ᎢᎦᎢ ᎤᎵᏍᏓᎯᎨ ᎭᏫᎾᏗᏢ ᎦᎷᎯᏍᏗ ᎾᎥᏂᎨ ᎯᎠ ᎦᏅᎯᏓ ᎠᏓ ᎬᎾᏬᏍᎬ ᎭᏫᎾᏗᏢ ᎦᎷᎯᏍᏗ ᎠᏰᎵ ᎯᎠ [[Tropic of Cancer|Tropic ᎠᏓᏰᏍᎩ]] ᎠᎴ ᎯᎠ [[Tropic of Capricorn|Tropic Capricorn]]. ᎭᏫᎾᏗᏢ ᎯᎠ [[ᎤᏴᏢ ᎢᏗᏢ ᎤᏔᏂᏗ ᎦᏙᎯ]], [[Denmark]] ᎤᎭ ᏍᏆᎵᎯᎨᏍᏗ ᏚᎵᏏᏂᏒ ᎭᏫᎾᏗᏢ ᏕᎭᎷᏱ ᎬᎾᏬᏍᎬ [[ᎠᎹ ᎦᏄᎪᎬ]] ᎤᎭ. ᎭᏫᎾᏗᏢ ᎯᎠ [[ᎤᎦᎾᏭ ᎢᏗᏢ ᎤᏔᏂᏗ ᎦᏙᎯ]], [[Antarctica]] ᎤᎭ ᎦᏅᎯᏓᎨ ᏚᎵᏏᏂᏒ ᎭᏫᎾᏗᏢ ᏕᎭᎷᏱ ᎬᎾᏬᏍᎬ [[Chile]] ᎤᎭ. ᎯᎠ ᎤᏴᏢ ᎢᏗᏢ ᎠᎴ ᎤᎦᎾᏭ ᎢᏗᏢ ᎤᏔᏂᏗ ᎦᏙᎯ ᎯᎠ ᎡᎶᎯ ugatohvsv ᎯᎠ ᎤᏠᏱ ᏧᎾᏟᎶᏍᏙᏗ ᏒᏃᏱ ᏂᎦᏅᎯᏒ ᎾᎾᎢ ᎯᎠ ᎤᏠᏱ [[ᎤᏜᏅᏛ]], ᎠᎴ ᎯᎠ ᎠᏓᏠᎯᏍᏗ ᎠᎴ 6 ᎢᏯᏅᏓ ᏧᎦᎴᏅᏓ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ Ꮎ ᏌᏊ ᎤᏔᏂᏗ ᎦᏙᎯ ᎤᏂᎦᏙᎲᏒ ᎦᏅᎯᏓ ᏚᎵᏏᏂᏒ (ᎪᎳ) ᎾᎯᏳᎢ ᎯᎠ ᏐᎢ ᎨᏒᎢ experiencing ᏍᏆᎳᎢ ᏚᎵᏏᏂᏒ (ᎪᎨᏱ).
 
 ᎾᎥᏂᎨ ᎯᎠ ᏔᎵ ᎦᏅᎯᏓ ᎠᏓ, ᎦᎶᏒᏍᏔᏅ ᏗᎧᏃᎩᏛ ᎭᏫᎾᏗᏢ ᎡᎦᎫᏘ ᎢᏧᏟᎶᏛ ᏄᎵᏍᏔᏅ ᎭᏫᎾᏗᏢ ᏫᎬᎵᏱᎵᏒ ᎢᎦ ᎾᏍᎩᎾᎢ ᎢᎦᏛ ᎯᎠ ᎪᎨᏱ, ᎠᏍᏓᏩᏛᏓ ᎾᎥᎢ ᏫᎬᎵᏱᎵᏒ ᏒᏃᏱ ᎾᎯᏳᎨᏒ ᎯᎠ ᎤᏒᏙᏂ ᎪᎳ.
 
 == ᎠᎾᏓᏟᏏᏍᎬ ᎢᎦᏛ ==
 
-ᏂᎦᏅᎯᏒ ᎯᎠ ᎠᏣᏪᏐᎸᏍᏙᏗ ᎧᏃᎮᏍᎩ, ᏒᏃᏱ ᎤᎭ ᎢᎬᏱᏗᏢ ᏭᏪᏙᎢ iyuwakodi ᎠᏣᏪᏐᎸᏍᏗᏍᎬ ᎠᎴ [[ᎦᎸᏗ]] ᎾᏍᎩᎾᎢ ᎠᏂᏴᏫ, ᎣᏂ ᏧᏩᎫᏛ ᎤᏍᏗ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎠᎴ ᏗᎦᎸᏫᏍᏓᏁᏗ ᏰᎵᏇ ᎾᏍᏋ ᎠᏍᏆᏛᎯ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᎳᏏᎩ. ᎾᎿ ᎯᎠ ᏐᎢ ᎤᏬᏰᏂ, ᎤᏍᎦᏎᏗ ᎠᏓᎸᎾᏍᏗ activities ᏯᏛᎿ ᏥᏄᏍᏗ ᎪᎱᏍᏗ ᏄᏰᎳᏛᎾ ᎠᎴ ᎠᏍᎦᏅᏨ ᏧᏩᏚᏃᎯ.[[File:MATTTREVITHICKBW.JPG|thumb|200px|left| ᏧᏍᏈᏯ ᏧᎸᏫᏍᏓᏁᎯ ᎦᎳᏅᏛ ᎾᎾᎢ nighttime]] ᏥᏄᏍᏗ ᏗᏟᎶᏍᏔᏅ [[ᎠᏨᏍᏛᏍᎬ]] ᎤᎭ ᎪᏢᎯᏌᏅ, ᏒᏃᏱ-iyuwakodi ᎠᎵᏂᎬᏁᏗᎢ ᎤᎭ ᎤᏁᏉᏨᎯ ᎠᎴ ᏗᏙᎳᎩ ᎦᏛᎬᎢ ᎢᎦᏛ ᎯᎠ [[ᎠᎵᏏᏅᏙᏗ]] ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᏚᏙᏢᏒᎢ.
+ᏂᎦᏅᎯᏒ ᎯᎠ ᎠᏣᏪᏐᎸᏍᏙᏗ ᎧᏃᎮᏍᎩ, ᏒᏃᏱ ᎤᎭ ᎢᎬᏱᏗᏢ ᏭᏪᏙᎢ iyuwakodi ᎠᏣᏪᏐᎸᏍᏗᏍᎬ ᎠᎴ [[ᎦᎸᏗ]] ᎾᏍᎩᎾᎢ ᎠᏂᏴᏫ, ᎣᏂ ᏧᏩᎫᏛ ᎤᏍᏗ ᏗᎦᎸᏫᏍᏓᏁᏗ ᎠᎴ ᏗᎦᎸᏫᏍᏓᏁᏗ ᏰᎵᏇ ᎾᏍᏋ ᎠᏍᏆᏛᎯ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᎳᏏᎩ. ᎾᎿ ᎯᎠ ᏐᎢ ᎤᏬᏰᏂ, ᎤᏍᎦᏎᏗ ᎠᏓᎸᎾᏍᏗ activities ᏯᏛᎿ ᏥᏄᏍᏗ ᎪᎱᏍᏗ ᏄᏰᎳᏛᎾ ᎠᎴ ᎠᏍᎦᏅᏨ ᏧᏩᏚᏃᎯ.[[File:MATTTREVITHICKBW.JPG|thumb|200px|left| ᏧᏍᏈᏯ ᏧᎸᏫᏍᏓᏁᎯ ᎦᎳᏅᏛ ᎾᎾᎢ nighttime]] ᏥᏄᏍᏗ ᏗᏟᎶᏍᏔᏅ [[ᎠᏨᏍᏛᏍᎬ]] ᎤᎭ ᎪᏢᎯᏌᏅ, ᏒᏃᏱ-ᎢᏳᏩᎪᏗ ᎠᎵᏂᎬᏁᏗᎢ ᎤᎭ ᎤᏁᏉᏨᎯ ᎠᎴ ᏗᏙᎳᎩ ᎦᏛᎬᎢ ᎢᎦᏛ ᎯᎠ [[ᎠᎵᏏᏅᏙᏗ]] ᎭᏫᎾᏗᏢ ᎤᎪᏗᏗ ᏚᏙᏢᏒᎢ.
 
 ᎢᏧᎳᎭ ᏄᏠᏯᏍᏛᎾ ᏗᏟᎶᏍᏔᏅ ᎠᏨᏍᏛ, [[ᏒᏃᏱ ᎡᎯ ᏅᏙ]]ᎠᏨᏍᏛ ᏱᏓᏟᎶᏍᏔᏅ ᏗᎪᏢᏅ ᎾᏍᎩ ᏰᎵᏊ ᎡᏙᎵᏙᎲ ᎠᎴ ᏗᎦᎸᏫᏍᏓᏁᏗ ᏙᏯᏗᏢ ᎾᎾᎢ ᏒᏃᏱ.
 
@@ -20,12 +21,10 @@
 
 == ᎠᎪᏩᏛᏗ ᎾᏍᎩ ᎾᏍᏇ ==
 {{Commons|Category:Night}}
-
-* [[Nocturnal animal|ᏒᎯᏰᏱ gantlai]]
+* [[Nocturnal animal|ᏒᎯᏰᏱ ᎦᏂᏝᎢ]]
 * [[Olbers' paradox|Olbers' ᎪᎱᏍᏗ ᏄᏰᎳᏛᎾ]]
 
-[[Category:Astronomy]]
-[[Category:Parts of a day]]
+[[Category:ᎢᎿᏩᎪᏗ]]
 
 [[af:Nag]]
 [[ar:ليل]]
