+ᎤᎾᏓᏟᏌᎲ, +section heading

--- a/ᏆᏍᏂᏯ_ᎠᎴ_ᎲᏤᎪᏫᎾ.mw
+++ b/ᏆᏍᏂᏯ_ᎠᎴ_ᎲᏤᎪᏫᎾ.mw
@@ -1,7 +1,9 @@
 [[File:Location Bosnia-Herzegovina Europe.png|thumb|right|ᏉᏍᏂᏯ]]'''ᏉᏍᏂᏯ''' ᏙᏱᏗᏢ ᎦᏚᎲ ᎧᎸᎬᎢᏗᏢ [[ᎡᎶᏆ]]. ᎠᎦᏴᎵ [[ᏳᎪᏍᎳᏈ]].
 
+==ᏙᏯᏗᏢ ᏗᏕᎬᏔᏛ==
 * [http://bosnianews.blogspot.com/ Bosnia News]
 
+[[Category:ᏳᎳᏛ]]
 {{stub}}
 
 [[ace:Bosnia Hèrzègovina]]
