--- a/ᎬᎾ.mw
+++ b/ᎬᎾ.mw
@@ -44,8 +44,8 @@
 * [http://ibc.hbw.com/ibc/phtml/familia.phtml?idFamilia=35 Turkey videos] ᎾᎿ ᎯᎠ ᎧᎾᏁᏍ ᏥᏍᏆ ᎤᏓᏂᏝᏅ
 * [http://www.etymonline.com/index.php?term=turkey Etymology of the word]
 
-[[Category:Meleagrididae|*]]
-[[Category:Fauna of Mexico]]
+[[Category:ᎦᏍᏆ]]
+[[Category:ᎠᎵᏍᏓᏴᏗ ᎠᎴ ᎠᏗᏔᏍᏗ]]
 
 [[ar:دجاج رومي]]
 [[bs:Ćurka]]
