--- a/ᏌᎪᏂᎨ_ᏣᎴᎩ.mw
+++ b/ᏌᎪᏂᎨ_ᏣᎴᎩ.mw
@@ -18,11 +18,7 @@
 == ᎤᏓᏎᎦᏤᏗ ᏗᏕᎬᏔᏛ ==
 * [http://www.theblueridgemountains.com/ The Blue Ridge Mountains.com]
 
-[[Category:Mountain ranges of the United States]]
-[[Category:Mountain ranges of North Carolina]]
-[[Category:Mountain ranges of Virginia]]
-[[Category:Mountain ranges of West Virginia]]
-[[Category:Appalachian culture]]
+[[Category:ᏙᏓᎸ]]
 
 [[cs:Blue Ridge Mountains]]
 [[da:Blue Ridge Mountains]]
