translate Mexico, update cats

--- a/ᏖᎸᎳᏗ.mw
+++ b/ᏖᎸᎳᏗ.mw
@@ -51,7 +51,7 @@ Grapevines ᎠᎴ ᎬᏔᏅᎯ ᏥᏄᏍᏗ ᎠᎵᏍᏓᏴᏗ digakohidi ᎾᎥ
 * ''[[Vitis vinifera]]'', ᎯᎠ European [[winemaking]] grapevine. ᎾᏰᎯᏯ ᎠᎧᎵᏏᏐᏗ ᏂᎦᏛ ᎦᏙᎯ Europe.
 * ''[[Vitis labrusca]]'', ᎯᎠ ᎤᏴᏢ ᏴᏩᏁᎬ ᎦᏍᎩᎶ ᎠᎴ ᏖᎸᎳᏗ ᎦᏁᎲ grapevines, ᏱᏓᏟᎶᏍᏔᏅ ᎬᏔᏅᎯ ᎾᏍᎩᎾᎢ ᎩᎦᎨ ᎠᏘᏣᏍᏗ. ᎾᏰᎯᏯ ᎯᎠ [[Eastern U.S.|ᎧᎸᎬᎢᏗᏢ Ꭴ..]] ᎠᎴ [[Canada]]. 
 * ''[[Vitis riparia]]'', ᎨᏯᏔᎯ vine [[North America|ᎤᏴᏢ ᎠᎺᎵᎨ]], ᏱᏓᏟᎶᏍᏔᏅ ᎬᏔᏅᎯ ᎾᏍᎩᎾᎢ winemaking ᎠᎴ ᎾᏍᎩᎾᎢ ᏧᏠᎯᏍᏗ. ᎾᏰᎯᏯ ᎯᎠ ᏂᎦᏛ [[Eastern U.S.|ᎧᎸᎬᎢᏗᏢ Ꭴ..]] ᎠᎴ ᎤᏴᏢ [[Quebec]].
-* ''[[Vitis rotundifolia]]'', ᎯᎠ [[muscadine|ᏔᎸᎳᏗ]], ᎬᏔᏅᎯ ᎾᏍᎩᎾᎢ ᏧᏠᎯᏍᏗ  ᎠᎴ ᎩᎦᎨ ᎠᏘᏣᏍᏗ. ᎾᏰᎯᏯ ᎯᎠ [[Southeastern U.S.|Southeastern Ꭴ..]] ᏂᏛᎴᏅᏓ [[Delaware]] ᎯᎠ [[Gulf of Mexico|ᏰᎵ ᎤᏝᏅᏛ  Mexico]].
+* ''[[Vitis rotundifolia]]'', ᎯᎠ [[muscadine|ᏔᎸᎳᏗ]], ᎬᏔᏅᎯ ᎾᏍᎩᎾᎢ ᏧᏠᎯᏍᏗ  ᎠᎴ ᎩᎦᎨ ᎠᏘᏣᏍᏗ. ᎾᏰᎯᏯ ᎯᎠ [[Southeastern U.S.|Southeastern Ꭴ..]] ᏂᏛᎴᏅᏓ [[Delaware]] ᎯᎠ [[Gulf of Mexico|ᏰᎵ ᎤᏝᏅᏛ ᎠᏂᏍᏆᏂᎢ]].
 * ''[[Vitis aestivalis]]'', ᎯᎠ ᏧᏓᎴᏅᏓ ᎦᏟᏌᏅ Norton (AKA Cynthiana) ᎨᏒᎢ ᎬᏔᏅᎯ ᎾᏍᎩᎾᎢ winemaking
 * ''[[Vitis lincecumii]]'' (ᎾᏍᎩ ᎾᏍᏇ ᎤᏯᏅᎲ ''Vitis aestivalis'' ᎠᎴ ''Vitis lincecumii''), ''[[Vitis berlandieri]]'' (ᎾᏍᎩ ᎾᏍᏇ ᎤᏯᏅᎲ ''Vitis cinerea'' var. helleri), ''[[Vitis cinerea]]'', ''[[Vitis rupestris]]'' ᎠᎴ ᎬᏔᏅᎯ ᎾᏍᎩᎾᎢ ᎠᏃᏢᏍᎬ ᏧᏠᎯᏍᏗ grapevines ᎠᎴ ᎾᏍᎩᎾᎢ ᎠᏍᎩᎾᏗᏍᏗ-ᏗᎦᏘᎸᏍᏗ [[rootstock]].
 * ''[[Vitis arizonica]]'' ᎢᎾᎨ grapevine ᎠᏩᏛᏗ ᎭᏫᎾᏗᏢ ᎯᎠ southwestern ᎢᏧᎳ ᎠᏴ Ꮎ ᎨᏒᎢ ᏄᎵᏂᎬᎬ ᏗᎦᏘᎴᎩ ᎦᎶᏒᏍᏔᏅ ᏄᏁᏌᏴᏢ. ᏰᎵᏇ ᎾᏍᏋ ᎬᏔᏅᎯ ᎾᏍᎩᎾᎢ ᎩᎦᎨ ᎠᏘᏣᏍᏗ.
@@ -117,15 +117,14 @@ Seedlessness ᎨᏒᎢ ᎦᎸᎳᏗᎨᏍᏗ ᏂᎪᎯᎸ ᎤᏚᎳᏗ ᏫᏚᏳ
 
 ᎾᎿᎢ ᎠᎴ ᎯᎸᏍᎩ ᏙᏧᏓᎴᏅ ᎯᎠ seedlessness ᏫᏚᏳᎪᏛ, ᎠᎴ ᎠᏏᏴᏫ ᏂᎦᏛ ᎠᏓᎾᏅᏗ cultivars ᎠᎩᏍᏗᏱ ᎾᏍᎩ ᏂᏛᎴᏅᏓ ᏌᏊ ᏦᎢ ᏙᏧᏓᎴᏅ: 'Thompson Seedless', 'Russian Seedless', ᎠᎴ 'ᎬᎿᎨ Monukka'. ᏂᎦᏛ ᎠᎴ ᎠᏁᎳ ''[[Vitis vinifera]]''.
 
-
-
 == ᎤᏓᏎᎦᏤᏗ ᏗᏕᎬᏔᏛ ==
 {{commons|Grape|ᏔᎸᎳᏘ}}
 * [http://www.itis.usda.gov/servlet/SingleRpt/SingleRpt?search_topic=TSN&search_value=28600 Integrated Taxonomic Information System entry for Grape family]
 * [http://ec.europa.eu/agriculture/agrista/2004/table_en/4611.pdf Area under vine (pdf)]
 * [http://www.fcps.k12.va.us/StratfordLandingES/Ecology/mpages/wild_grape.htm Wild Grapes]
 
-[[Category:ᎤᏓᏔᏅᎠᎩᏍᏗ]]
+[[Category:Plantae]]
+[[Category:ᎠᎵᏍᏓᏴᏗ ᎠᎴ ᎠᏗᏔᏍᏗ]]
 
 [[als:Weintraube]]
 [[an:Uga]]
